feat(ai-kit-use): Add instructions for using the English version of the AI ​​portable kit gitbook

--- a/AI_Portable_Kit_EN/1-ProductIntroduction/1.2-ApplicationScenarios.md
+++ b/AI_Portable_Kit_EN/1-ProductIntroduction/1.2-ApplicationScenarios.md
@@ -1,27 +1,27 @@
-## 1.2 应用场景
+## Application Scenarios
 
-便携式人工智能教育实训箱具备五大视觉算法与八大核心学习模块，支持一键启动、拖拽示教等多种交互方式，无需编程即可快速开展AI实践。配备多种扩展模块，适用于教学、实训、考核等场景，助力学生系统掌握AI与机器人技术全链路能力。
+This portable AI educational training box features five vision algorithms and eight core learning modules. It supports multiple interactive methods, including one-click start and drag-and-drop teaching, allowing for rapid AI practice without programming. Equipped with a variety of expansion modules, it's suitable for teaching, practical training, and assessment scenarios, helping students systematically master the full range of AI and robotics capabilities.
 
-- 3分钟快速部署：
+- 3-minute quick deployment:
 
 ![CheckTheBox](../resources/1-ProductIntroduction/unboxing.gif)
 
-- 5大视觉算法：
+- 5 major visual algorithms:
 
 ![CheckTheBox](../resources/1-ProductIntroduction/function.gif)
 
-- 8大学习点：
+- 8 major learning points:
 
 ![CheckTheBox](../resources/1-ProductIntroduction/1-2.png)
 
-- 多种机械臂适配：
+- Multiple robotic arm adaptation:
 
 ![CheckTheBox](../resources/1-ProductIntroduction/more_robot.gif)
 
-- 配备多种拓展模块：
+- Equipped with a variety of expansion modules:
 
 ![CheckTheBox](../resources/1-ProductIntroduction/end_handle.gif)
 
 ---
 
-[← 上一页](1.1-ProductIntroduction.md) | [下一章 →](../2-ProductFeature/README.md)<br>
+[← Previous Page](1.1-ProductIntroduction.md) | [Next Chapter →](../2-ProductFeature/README.md)<br>
