--- a/AI_Portable_Kit_EN/2-ProductFeature/2.2-270_version.md
+++ b/AI_Portable_Kit_EN/2-ProductFeature/2.2-270_version.md
@@ -1,66 +1,65 @@
-# 2.2 Ai 便携实训箱-270版本
+# Ai Portable Training Box - Version 270
 
->>（主机及配件需另外选购录单）
+>> (Host and accessories must be purchased separately)
 
 ![](../resources/2-ProductFeature/2.1/2-1.png)
 
-| 参数类别  | 详细信息                                       |
+| Parameter Category | Detailed Information |
 |------------------|-----------------------------------------------------------------------------|
-| 型号             | 行李箱        |
-| 整体尺寸               |640×420×285mm                           |
-| 整体重量             | 11.2KG（不含机械臂                               |
-|       供电电源       | 	12V 5A |
-| 摄像头法兰(标配)             | 	my系列套装摄像头模组                          |
-| 触控屏         | 	10.1英寸触摸显示屏 1920*1200                           |
-| 键鼠手柄组合           | RK707 USB连接方式 单无线版                   |
+| Model | Suitcase |
+| Overall Dimensions | 640×420×285mm |
+| Overall Weight | 11.2KG (excluding robotic arm) |
+| Power Supply | 12V 5A |
+| Camera Flange (Standard) | my Series Camera Module |
+| Touch Screen | 10.1-inch Touch Screen (1920*1200) |
+| Keyboard, Mouse, and Controller Combination | RK707 USB Connection (Single Wireless Version) |
 
 ## MechArm 270
 
 <table>
 <tr>
-    <td> 产品 </td>
-    <td>图片</td>
-    <td>链接</td>
+    <td> product </td>
+    <td>picture</td>
+    <td>Link</td>
 </tr>
 <tr>
     <td>mechArm 270 M5</td>
     <td> <img src="../resources/2-ProductFeature/2.2/2.2-1.png"></td>
-    <td><a href="https://docs.elephantrobotics.com/docs/mecharm-m5-cn/">简介</a></td>
+    <td><a href="https://docs.elephantrobotics.com/docs/mecharm-m5-en/">Introduction</a></td>
 </tr>
 <tr>
     <td>mechArm 270 PI</td>
     <td> <img src="../resources/2-ProductFeature/2.2/2.2-2.png"></td>
-    <td><a href="https://docs.elephantrobotics.com/docs/mecharm-m5-en/">简介</a></td>
+    <td><a href="https://docs.elephantrobotics.com/docs/mecharm-pi-en/">Introduction</a></td>
 </tr>
 </table>
 
 ![](../resources/2-ProductFeature/2.2/2.2-3.png)
 
-| 参数类别       | 详细信息 |
-| :-----------: | :---------: |
-| 型号         |mechArm 270 for M5 |
-| 自由度       | 6          |
-| 有效负载     | 250g       |
-| 工作半径     | 270mm      |
-| 重复定位精度 | ±0.5mm  |
-| 重量         | 1000g       |
-| 电源输入     | 8 ~ 12V，5A       |
-| 工作温度     | -5-45℃     |
-| 通信         | Type-C     |
+| Parameter Category | Details |
+| :----------: | :---------: |
+| Model | mechArm 270 for M5 |
+| Degrees of Freedom | 6 |
+| Payload | 250g |
+| Working Radius | 270mm |
+| Repeatability | ±0.5mm |
+| Weight | 1000g |
+| Power Input | 8 to 12V, 5A |
+| Operating Temperature | -5-45°C |
+| Communication | Type-C |
 
-
-| 参数类别       | 详细信息 |
+| Parameter Category | Details |
 | :-----------: | :---------: |
-| 型号         | mechArm 270 for Pi |
-| 自由度       | 6          |
-| 有效负载     | 250g       |
-| 工作半径     | 270mm      |
-| 重复定位精度 | ±0.5mm  |
-| 重量         | 1000g       |
-| 电源输入     | 8 ~ 12V，5A       |
-| 工作温度     | -5-45℃     |
-| 通信         | Type-C     |
+| Model | mechArm 270 for Pi |
+| Degrees of Freedom | 6 |
+| Payload | 250g |
+| Working Radius | 270mm |
+| Repeatability | ±0.5mm |
+| Weight | 1000g |
+| Power Input | 8-12V, 5A |
+| Operating Temperature | -5-45°C |
+| Communication | Type-C |
 
 ---
 
-[← 上一页](2.1-280_version.md) | [下一页 →](2.3-260_version.md)
+[← Previous Page](./2.1-280_version.md) | [Next Page →](2.3-260_version.md)
