--- a/AI_Portable_Kit_EN/2-ProductFeature/2.4.4-camera.md
+++ b/AI_Portable_Kit_EN/2-ProductFeature/2.4.4-camera.md
@@ -1,64 +1,63 @@
-# myCobot 摄像模组 v2.0
+# myCobot Camera Module v2.0
 
-**产品图示**
+**Product Image**
 
 > ![pi](../resources/2-ProductFeature/2.4/2.4.4-1.png)
 
-**规格说明：**
+**Specifications:**
 
-| 名称             | myCobot 摄像模组 v2.0                                                                      |
+| Name | myCobot Camera Module v2.0 |
 | ---------------- | ------------------------------------------------------------------------------------------ |
-| 型号             | myCobot_cameraHolder_J6                                                                    |
-| 颜色             | 白色（默认）                                                                               |
-| 材料             | ABS 注塑                                                                                   |
-| 尺寸             | 83*64*16                                                                                   |
-| USB 协议         | USB2.0 HS/FS                                                                               |
-| 镜头焦距         | 标配 1.7mm                                                                                 |
-| 视场角度         | 约 60°                                                                                     |
-| 支持的系统       | Win7/8/10、Linux、MAC                                                                      |
-| 支持的分辨率       | 2592x1944，2560x1440，2048x1536，1920x1080，1280x72，1024x768，800x600，640x480，640x360，352x288，320x240，176x144                                          |
-| 使用寿命         | 两年                                                                                       |
-| 固定方式         | 乐高连接件                                                                                 |
-| 使用环境要求     | 常温常压                                                                                   |
-| 适用设备 support | ER myCobot 280 系列 ，ER myPalletizer 260 系列， ER mechArm 270 系列， ER myBuddy 280 系列 |
+| Model | myCobot_cameraHolder_J6 |
+| Color | White (default) |
+| Material | ABS injection molding |
+| Dimensions | 83*64*16 |
+| USB Protocol | USB2.0 HS/FS |
+| Lens Focal Length | Standard 1.7mm |
+| Field of View | Approximately 60° |
+| Supported Systems | Win7/8/10, Linux, MAC |
+| Supported Resolutions | 2592x1944, 2560x1440, 2048x1536, 1920x1080, 1280x72, 1024x768, 800x600, 640x480, 640x360, 352x288, 320x240, 176x144 |
+| Service Life | Two Years |
+| Mounting Method | LEGO Connectors |
+| Operating Environment | Normal Temperature and Pressure |
+| Supported Devices | ER myCobot 280 Series, ER myPalletizer 260 Series, ER mechArm 270 Series, ER myBuddy 280 Series |
 
-**摄像头法兰 :** 机器视觉
+**Camera Flange:** Machine Vision
 
-**简介**
+**Introduction**
 
-- USB 高清摄像头可搭配吸泵、自适应夹爪、人工智能套装等，eye in hand 实现精确定位与标定。
+- This USB HD camera can be used with suction pumps, adaptive grippers, and AI kits, enabling precise positioning and calibration with your fingertip.
 
-**安装使用**
+## Installation and Usage
 
-- 检查配件包东西是否齐全：乐高连接件、带 usb 线的摄像头模组
+- Check if the accessories package is complete: Lego connector, camera module with USB cable
   ![alt text](../resources/2-ProductFeature/2.4/2.4.4-2.png)
 
-- 摄像头安装：
+- Camera installation:
 
-  结构安装：
+  **Structural installation:**
 
-  将乐高连接件插入摄像模组预留的插孔中：
+  Insert the Lego connector into the reserved socket of the camera module:
   ![](../resources/2-ProductFeature/2.4/2.4.4-3.png)
 
-  将插好连接件的摄像模组对准机械臂末端插孔插入：
+  Align the camera module with the connector plugged in with the socket at the end of the robotic arm and insert it:
   ![](../resources/2-ProductFeature/2.4/2.4.4-4.png)
 
-  电气连接：
+  **Electrical connections:**
 
-  将 USB 线插入底座 USB 接口：
+  Plug the USB cable into the dock USB port:
   ![](../resources/2-ProductFeature/2.4/2.4.4-5.png)
   
-## 编程开发：
+## Programming Development:
 
-
- > 代码如下：
+> The code is as follows:
 
 ```python
 python
 import cv2
 import numpy as np
 
-cap = cv2.VideoCapture(0) # “0”，根据查询到的摄像设备号来定
+cap = cv2.VideoCapture(0) # "0", determined by the camera device number found
 
 while(True):
     ret, frame = cap.read()
