--- a/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.6-precautions.md
+++ b/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.6-precautions.md
@@ -1,25 +1,27 @@
-# 注意事项
+# Notes
 
-## 坐标偏移量修改
+## Coordinate Offset Modification
 
 ![](../resources/5-BasicAlgorithmFunction/5.6-1.png)
 
-当运行1-5识别算法功能时，如果机械臂无法准确抓取可识别物体或木块，需根据不同的算法调整XYZ偏移量，可以按下**数字6启动AiKit_UI图形化软件**进行修改偏移量：
+When running the 1-5 recognition algorithms, if the robot arm cannot accurately grasp a recognized object or block, adjust the X, Y, and Z offsets based on the algorithm. Press **number 6** to launch the AiKit_UI graphical software and modify the offsets:
 
 ![](../resources/5-BasicAlgorithmFunction/5.6-2.png)
 
 ![](../resources/5-BasicAlgorithmFunction/5.6-3.png)
 
-
-X 偏移量、Y 偏移量、Z 偏移量分别代表的是机械臂坐标X轴、Y轴、Z轴的位置，可以根据实际需求进行修改，点击’保存‘按钮进行保存，保存成功后将会按照最新点位进行抓取。
+The X offset, Y offset, and Z offset represent the X, Y, and Z coordinate positions of the robot arm, respectively. You can modify them according to your needs. Click the 'Save' button to save the data. Once saved, the robot arm will grasp the object based on the latest position.
 
 ![](../resources/5-BasicAlgorithmFunction/5.6-4.png)
 
-## 其他事项
+## Other Notes
 
-1. 键盘按键 1 ~ 5 识别算法功能中的坐标抓取偏移量依赖Aikit_UI中的偏移量，所以调整坐标偏移量需输入**按键 6** 启动AiKit_UI程序进行修改保存。
-2. 该程序支持识别算法功能直接切换，比如当前运行的是颜色识别功能，可直接输入2切换到形状识别功能。如果当前运行的是 AiKit_UI程序，需要在UI程序右上角手动关闭程序后， 才能按键输入切换其他识别算法功能。
-3. 当摄像头没有正确自动框出识别区域，需要关闭程序，调整摄像头的位置，可将摄像头向左向右移动等操作。
-4. OpenCV颜色识别会受环境的影响，若处在较为昏暗、光亮的环境下识别效果将大大降低。
-5. 识别算法功能中，不同的功能对应不同的识别物料，请正确选择使用。
-6. myPalletizer 260设备只有1-8功能按键，mechArm 270设备只有1-9功能按键。
+1. The coordinate capture offsets in the recognition algorithm functions using keyboard keys 1 to 5 are dependent on the offsets in AiKit_UI. Therefore, to adjust the coordinate offsets, press **key 6** to launch the AiKit_UI program and save the changes.
+
+2. This program supports direct switching between recognition algorithm functions. For example, if you are currently running the color recognition function, you can directly enter 2 to switch to the shape recognition function. If you are currently running the AiKit_UI program, you must manually close the program in the upper right corner of the UI program before you can switch to other recognition algorithm functions.
+
+3. If the camera does not automatically define the recognition area correctly, close the program and adjust the camera position by moving it left or right.
+
+4. OpenCV color recognition is affected by the environment. Recognition performance will be significantly reduced in dim or bright environments.
+
+5. Different recognition algorithm functions correspond to different materials. Please select the appropriate one. 6. The myPalletizer 260 device only has function buttons 1-8, and the mechArm 270 device only has function buttons 1-9.
