--- a/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.1-knowleged.md
+++ b/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.1-knowleged.md
@@ -1,26 +1,26 @@
 
-# 6.1 知识准备
+# 6.1 Knowledge Preparation
 
-## 6.1.1 什么是OpenCV
+## 6.1.1 What is OpenCV
 
-openCV全称是Open Source Computer Vision Library。是Intel（英特尔）公司开源计算机视觉库，它有一系列C函数和C++类构成，实现了图像处理和计算机视觉方面的很多通用算法。
+OpenCV stands for Open Source Computer Vision Library. It's an open-source computer vision library from Intel. It consists of a series of C functions and C++ classes that implement many common algorithms for image processing and computer vision.
 
-## 6.1.2 OpenCV的安装与使用
+## 6.1.2 Installation and use of OpenCV
 
 **Windows**
 
-打开一个控制台终端（快捷键Win+R,输入cmd，进入终端），输入以下命令：
+Open a console terminal (shortcut key Win+R, enter cmd, enter the terminal), enter the following command:
 
 ```bash
-# 二者版本号需保持一致，这里安装4.6.0.66版本
+# The version numbers of the two need to be consistent, and version 4.6.0.66 is installed here
 pip install opencv-python==4.6.0.66
 pip install opencv-contrib-python==4.6.0.66
 ```
 
-- 安装验证
+- Installation Verification
 
 ```bash
-# 也可查看其他python库  格式：pip show 库名称
+# You can also view other python libraries format: pip show library name
 pip show opencv-python
 pip show opencv-contrib-python
 ```
@@ -31,21 +31,21 @@ pip show opencv-contrib-python
 
 **Linux**
 
-打开一个控制台终端(快捷键Ctrl+Alt+T)，输入命令：
+Open a console terminal (shortcut key Ctrl+Alt+T), enter the command:
 
 ```bash
-# 二者版本号需保持一致，这里安装4.6.0.66版本
+# The version numbers of the two need to be consistent, and version 4.6.0.66 is installed here
 pip install opencv-python==4.6.0.66
 pip install opencv-contrib-python==4.6.0.66
 ```
 
-**简单使用**
+**simple use**
 
 ```bash
 import cv2 
 def openCamera():
-    print('opencv版本',cv2.__version__)
-    print("键盘ESC退出")
+    print('opencv version',cv2.__version__)
+    print("Keyboard ESC to exit")
 
     cap = cv2.VideoCapture(0) # Linux
     # cap = cv2.VideoCapture(1) # Windows
@@ -64,63 +64,62 @@ if __name__=="__main__":
 
 ```
 
-## 6.1.3 坐标转换与标定
+## 6.1.3 Coordinate Transformation and Calibration
 
-**1 四种坐标系**
+**1 four coordinate systems**
 
-在机械臂视觉开发中，需要进行的一个重要预备工作是理解四个坐标系的意义，即相机坐标系、 世界坐标系、工具坐标系和基坐标系。
+In the development of robotic arm vision, an important preparatory work is to understand the meaning of the four coordinate systems, namely the camera coordinate system, the world coordinate system, the tool coordinate system and the base coordinate system.
 
 ![](../resources/6-RoboticArmKnowledge/6.1-3.png)
 
-- 世界坐标系：世界坐标系（world coordinate），也称为测量坐标系，是一个三维直角坐标系，以其为基准可以描述相机和待测物体的空间位置。世界坐标系的位置可以根据实际情况自由确定。可以理解为大地坐标系。
+- World coordinate system: The world coordinate system (world coordinate), also known as the measurement coordinate system, is a three-dimensional Cartesian coordinate system, based on which the spatial position of the camera and the object to be measured can be described. The position of the world coordinate system can be freely determined according to the actual situation. It can be understood as the earth coordinate system.
 
-- 相机坐标系：相机坐标系（camera coordinate），是一个三维直角坐标系，原点位于镜头光心处，x、y轴分别与相面的两边平行，z轴为镜头光轴，与像平面垂直。
+- Camera coordinate system: The camera coordinate system (camera coordinate) is a three-dimensional rectangular coordinate system. The origin is located at the optical center of the lens. The x and y axes are respectively parallel to the two sides of the phase surface. The z axis is the lens optical axis and is perpendicular to the image plane.
 
-- 工具坐标系：6轴或7轴的协作臂的工具坐标系，，原点一般为机械臂的末端中心，也叫做TCP(ToolCenterPoint),Z轴于末端轴心重合，指向末端的朝向。
+- Tool coordinate system: The tool coordinate system of the 6-axis or 7-axis collaborative arm. The origin is generally the center of the end of the robot arm, also called TCP (ToolCenterPoint). The Z axis coincides with the axis of the end and points to the direction of the end.
 
-- 基座标系：机械臂都有基坐标系，默认原点是协作臂底座的中心点。
+- Base coordinate system: Dobots have a base coordinate system, and the default origin is the center point of the base of the collaborative arm.
 
+**2 camera calibration** 
 
-**2 相机标定** 
+The conversion of one coordinate system to another coordinate system mainly includes two aspects: position (origin) and attitude (XYZ axis). The transformation of the origin position is called translation, and the transformation of attitude is called rotation
 
-一个坐标系转换到另一个坐标系，主要包括两个方面：位置(原点)和姿态(XYZ轴向)。原点位置的变换叫做平移，姿态的变换叫做旋转
+**3 Convert pixel coordinate system to base coordinate system** 
 
-**3 像素坐标系转换为基座标系** 
+* Taking the visual recognition of a dual-arm robotic arm as an example
 
-* 以双臂机械臂的视觉识别作为例
-
-通过摄像头获取图像中的像素中心点的数值，与起始点的像素中心点做差值，得出像素差值之后。根据标定设置的比例对求出的像素差值做变换。转换为世界坐标系下的差值，机械臂在获得起始点的世界坐标之后，根据计算得出的世界坐标的差值，得出实际的所要抓取的世界坐标。将该坐标发送给机械臂，即可实现定位抓取。
+Obtain the value of the pixel center point in the image through the camera, and make a difference with the pixel center point of the starting point to obtain the pixel difference value. Transform the calculated pixel difference according to the scale set by the calibration. Converted to the difference in the world coordinate system, after the robot arm obtains the world coordinate of the starting point, it can obtain the actual world coordinate to be grasped according to the calculated difference of the world coordinate. Send the coordinates to the robotic arm to realize positioning and grabbing.
 
 ![](../resources/6-RoboticArmKnowledge/6.1-4.png)
 
-## 6.1.4 机械臂坐标转换与标定
+## 6.1.4 Coordinate Transformation and Calibration of Robotic Arm
 
-* 通过测量抓取区域中的两个aruco的像素点位可计算出两个aruco的之间的像素距离M1，测量两个aruco的实际距离M2，这样我们就能获得像素与实际距离的比值 ratio = M2 / M1。我们可以从图片中计算出物块距离抓取区域中心的像素差，这样我们可以计算出物块实际距离抓取区域中心的相对坐标(x1, y1)。将相对坐标(x1, y1)加上抓取区域中心到机械臂的相对坐标(x2, y2)，即可求得物块对于机械臂的相对坐标(x3, y3)。
+* The pixel distance M1 between the two arucos can be calculated by measuring the pixel points of the two arucos in the capture area, and the actual distance M2 of the two arucos can be measured, so that we can obtain the ratio of the pixel to the actual distance = M2/M1. We can calculate the pixel difference between the block and the center of the grabbing area from the picture, so that we can calculate the relative coordinates (x1, y1) of the block from the center of the grabbing area. Add the relative coordinates (x1, y1) to the relative coordinates (x2, y2) from the center of the grasping area to the robotic arm to obtain the relative coordinates (x3, y3) of the object to the robotic arm.
 
 
 ```bash
-# 抓取中心点相对于机械臂的坐标
+# Grab the coordinates of the center point relative to the robot arm
 self.camera_x, self.camera_y = camera_x, camera_y
 
-# 物体相对于机械臂的坐标，可以设置参数为：
+# The coordinates of the object relative to the robot arm can be set as:
 self.c_x = self.c_y = 0, 0
 
-# 像素与实际比值
+# Pixel to Actual Ratio
 self.ratio = 0
 
-# 设置参数函数用于计算立方体和机械臂之间的坐标
+# Set the parameter function used to calculate the coordinates between the cube and the arm
 def set_params(self, c_x, c_y, ratio):
     self.c_x = c_x
     self.c_y = c_y
     self.ratio = 220.0/ratio
 
-# 获取位置函数，用于计算立方体和机械臂之间的坐标
+# Get the position function, used to calculate the coordinates between the cube and the arm
 def get_position(self, x, y):
     return ((y - self.c_y)*self.ratio + self.camera_x), ((x - self.c_x)*self.ratio + self.camera_y)
 
 ```
 
-- 接下来，程序会调用设置参数函数 **set_params()**，用于 计算和设置计算物体和机械臂之间真实坐标的参数
+- Next, the program will call the setting parameter function **set_params()**, which is used to calculate and set the parameters for calculating the real coordinates between the object and the robot arm
 
 ```bash
 detect.set_params(
@@ -132,26 +131,26 @@ detect.set_params(
 
 ```
 
-- 然后将调用函数get_position() 用于 计算立方体和 mycobot 之间的真实坐标。
+- Then the function get_position() will be called to calculate the real coordinates between the cube and mycobot.
 
 ```bash
 real_x, real_y = detect.get_position(x, y)
 
 ```
 
-- 最终将获取的真实坐标经过稍微处理，将其传入 **decide_move()** 函数，供后续机械臂抓取使用。
+- Finally, the real coordinates obtained will be slightly processed, and passed into the **decide_move()** function for subsequent robotic arm grabbing.
 
 ```bash
 detect.decide_move(real_sx/20.0, real_sy/20.0, detect.color)
 ```
 
-**注意事项**
+**Precautions**
 
-1. **opencv-python** 和 **opencv-contrib-python** 版本库需保持一致，且版本号大于 **4.5.5**。
+1. **opencv-python** and **opencv-contrib-python** version libraries need to be consistent, and the version number is greater than **4.5.5**.
 
-2. 当摄像头没有正确自动框出识别区域，需要关闭程序，调整摄像头的位置，可将摄像头向左向右移动等操作。
-3. 若命令终端没有出现ok，且无法识别颜色时，需要将摄像头稍微向后或向前移动一下，当命令终端出现ok时程序即可正常运行。
-4. OpenCV颜色识别会受环境的影响，若处在较为昏暗的环境下识别效果将大大降低。
-5. 进行yolov5图像识别时，为了更好的识别图片需要**将物体反放在识别区域**。
+2. When the camera does not automatically frame the recognition area correctly, you need to close the program, adjust the position of the camera, and move the camera to the left or right.
+3. If the command terminal does not show ok, and the color cannot be recognized, you need to move the camera slightly backward or forward, and the program can run normally when the command terminal shows ok.
+4. OpenCV color recognition will be affected by the environment, and the recognition effect will be greatly reduced in a darker environment.
+5. When performing yolov5 image recognition, in order to better recognize the picture, it is necessary to reverse the object in the recognition area**.
 
 ![](../resources/6-RoboticArmKnowledge/6.1-5.png)
