--- a/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.4-motors_and_servos.md
+++ b/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.4-motors_and_servos.md
@@ -1,67 +1,64 @@
-# 电机与舵机
+# Motor & Steering Gear
 
 ![dcmotor](../resources/6-RoboticArmKnowledge/6.4-1.png)
 
 
-## 电机是什么？
+## What is a motor?
 
-- **1 按工作电源种类划分**：可分为直流电机和交流电机。
-    - 1）直流电动机按结构及工作原理可划分：无刷直流电动机和有刷直流电动机。  
-        - 有刷直流电动机可划分：永磁直流电动机和电磁直流电动机。  
-        - 电磁直流电动机划分：串励直流电动机、并励直流电动机、他励直流电动机和复励直流电动机。  
-        - 永磁直流电动机划分：稀土永磁直流电动机、铁氧体永磁直流电动机和铝镍钴永磁直流电动机。  
-    - 2）其中交流电机还可划分：单相电机和三相电机。  
-
+- **1 Classification by power supply**: DC motors and AC motors.
+  - 1) DC motors can be classified by structure and operating principle into brushless DC motors and brushed DC motors.
+    - Brushed DC motors can be classified into permanent magnet DC motors and electromagnetic DC motors.
+    - Electromagnetic DC motors can be classified into series-wound DC motors, shunt-wound DC motors, separately-wound DC motors, and compound-wound DC motors.
+    - Permanent magnet DC motors can be classified into rare earth permanent magnet DC motors, ferrite permanent magnet DC motors, and alnico permanent magnet DC motors.
+  - 2) AC motors can be further classified into single-phase motors and three-phase motors.
 
 ![dcmotor](../resources/6-RoboticArmKnowledge/6.4-2.png)
 
-- **2 按用途可划分**：驱动用电动机和控制用电动机。  
-    - 1）驱动用电动机可划分：电动工具（包括钻孔、抛光、磨光、开槽、切割、扩孔等工具）用电动机、家电（包括洗衣机、电风扇、电冰箱、空调器、录音机、录像机、影碟机、吸尘器、照相机、电吹风、电动剃须刀等）用电动机及其他通用小型机械设备（包括各种小型机床、小型机械、医疗器械、电子仪器等）用电动机。  
-    - 2）控制用电动机又划分：步进电动机和伺服电动机等。  
+- **2 Classification by application**: Drive motors and control motors.
+  1) Drive motors can be categorized into: motors for power tools (including drilling, polishing, grinding, grooving, cutting, and reaming tools); motors for household appliances (including washing machines, electric fans, refrigerators, air conditioners, tape recorders, video recorders, DVD players, vacuum cleaners, cameras, hair dryers, and electric shavers); and motors for other general-purpose small mechanical equipment (including various small machine tools, small machinery, medical devices, and electronic instruments).
+  2) Control motors are further categorized into: stepper motors and servo motors.
 
-## 舵机是什么？
+## What is a Servo?
 
 ![dcmotor](../resources/6-RoboticArmKnowledge/6.4-3.png)
 
-舵机其实就是伺服电机，因为国内的用户已开始使用在航模等设备的舵轴控制，所以国内对这些轻量级的伺服电机称之为舵机。
+A servo is essentially a servo motor. Because domestic users have begun using it to control the steering axis of equipment like model aircraft, these lightweight servo motors are often referred to as servos.
 
-### 什么是伺服电机   
+### What is a Servo Motor?
 
-**伺服电机（servo motor ）**是指在伺服系统中控制机械元件运转的发动机，是一种补助马达间接变速装置。<br>
-伺服电机可使控制速度，位置精度非常准确，可以将电压信号转化为转矩和转速以驱动控制对象。伺服电机转子转速受输入信号控制，并能快速反应，在自动控制系统中，用作执行元件，且具有机电时间常数小、线性度高等特性，可把所收到的电信号转换成电动机轴上的角位移或角速度输出。分为直流和交流伺服电动机两大类，其主要特点是，当信号电压为零时无自转现象，转速随着转矩的增加而匀速下降。
+A servo motor is a motor that controls the operation of mechanical components in a servo system. It is a type of indirect speed-changing device that assists a motor. <br>
+Servo motors can control speed and position with extremely high accuracy, converting voltage signals into torque and speed to drive the controlled object. The rotor speed of a servo motor is controlled by an input signal and responds quickly. In automatic control systems, it is used as an actuator. It features a small electromechanical time constant and high linearity, converting the received electrical signal into an angular displacement or angular velocity output on the motor shaft. Servo motors are classified into two categories: DC and AC. Their main characteristics are that they exhibit no self-rotation when the signal voltage is zero, and their speed decreases uniformly as torque increases.
 
-### 伺服电机的工作原理
+### Working Principle of a Servo Motor
 
-- **1.伺服系统（servo mechanism）**是使物体的位置、方位、状态等输出被控量能够跟随输入目标（或给定值）的任意变化的自动控制系统。伺服主要靠脉冲来定位，基本上可以这样理解，伺服电机接收到1个脉冲，就会旋转1个脉冲对应的角度，从而实现位移，因为，伺服电机本身具备发出脉冲的功能，所以伺服电机每旋转一个角度，都会发出对应数量的脉冲，这样，和伺服电机接受的脉冲形成了呼应，或者叫闭环，如此一来，系统就会知道发了多少脉冲给伺服电机，同时又收了多少脉冲回来，这样，就能够很精确的控制电机的转动，从而实现精确的定位，可以达到0.001mm。直流伺服电机分为有刷和无刷电机。有刷电机成本低，结构简单，启动转矩大，调速范围宽，控制容易，需要维护，但维护不方便（换碳刷），产生电磁干扰，对环境有要求。因此它可以用于对成本敏感的普通工业和民用场合。<br>
-无刷电机体积小，重量轻，出力大，响应快，速度高，惯量小，转动平滑，力矩稳定。控制复杂，容易实现智能化，其电子换相方式灵活，可以方波换相或正弦波换相。电机免维护，效率很高，运行温度低，电磁辐射很小，长寿命，可用于各种环境。<br>
+- **1. A servo system** is an automatic control system that enables an output controlled variable, such as an object's position, orientation, or state, to follow arbitrary changes in an input target (or setpoint). Servo positioning primarily relies on pulses. Basically, when a servo motor receives a pulse, it rotates by the angle corresponding to that pulse, thereby achieving displacement. Because servo motors inherently generate pulses, they send a corresponding number of pulses for each angle they rotate, forming a closed loop with the pulses they receive. This ensures that the system knows how many pulses it has sent to the servo motor and how many pulses it has received back. This allows for precise control of the motor's rotation, achieving positioning accuracy as low as 0.001mm. DC servo motors are categorized as brushless or brushless. Brushless motors offer low cost, simple structure, high starting torque, a wide speed range, and ease of control. While maintenance is inconvenient (due to carbon brush replacement), they generate electromagnetic interference and have environmental requirements. Therefore, they are suitable for cost-sensitive general industrial and consumer applications. Brushless motors are compact and lightweight, offering high output, fast response, high speed, low inertia, smooth rotation, and stable torque. While complex control is easy to implement with intelligent technology, their electronic commutation is flexible, allowing for both square-wave and sine-wave commutation. They are maintenance-free, highly efficient, operate at low temperatures, emit minimal electromagnetic radiation, and have a long lifespan, making them suitable for use in a variety of environments.
 
-- **2.交流伺服电机也是无刷电机**，分为同步和异步电机，运动控制中一般都用同步电机，它的功率范围大，可以做到很大的功率。大惯量，最高转动速度低，且随着功率增大而快速降低。因而适合做低速平稳运行的应用。
+- **2. AC servo motors are also brushless motors**. They are categorized as synchronous and asynchronous motors. Synchronous motors are generally used in motion control. They have a wide power range and can achieve very high power. They also have high inertia and a low maximum rotational speed, which decreases rapidly with increasing power. Therefore, they are suitable for applications requiring low-speed, stable operation.
 
-- **3.伺服电机内部的转子是永磁铁**，驱动器控制的U/V/W三相电形成电磁场，转子在此磁场的作用下转动，同时电机自带的编码器反馈信号给驱动器，驱动器根据反馈值与目标值进行比较，调整转子转动的角度。伺服电机的精度决定于编码器的精度（线数）。<br>交流伺服电机和无刷直流伺服电机在功能上的区别：交流伺服要好一些，因为是正弦波控制，转矩脉动小。直流伺服是梯形波。但直流伺服比较简单，便宜。
+- **3. The rotor inside a servo motor is a permanent magnet**. The three-phase U/V/W power controlled by the driver creates an electromagnetic field, causing the rotor to rotate. Simultaneously, the motor's built-in encoder provides feedback to the driver, which compares the feedback signal with the target value and adjusts the rotor's rotation angle. The accuracy of a servo motor is determined by the encoder's accuracy (number of lines). The functional difference between AC servo motors and brushless DC servo motors is that AC servo motors are better because they use sinusoidal wave control and have low torque ripple. DC servo motors use trapezoidal wave control. However, DC servo motors are simpler and cheaper.
 
 ![dcmotor](../resources/6-RoboticArmKnowledge/6.4-4.png)
 
-工业用伺服电机
+Industrial Servo Motors
 
-### 伺服电机的特点对比
-直流无刷伺服电机特点
-转动惯量小、启动电压低、空载电流小； 弃接触式换向系统，大大提高电机转速，最高转速高达100 000rpm；无刷伺服电机在执行伺服控制时，无须编码器也可实现速度、位置、扭矩等的控制； 不存在电刷磨损情况，除转速高之外，还具有寿命长、噪音低、无电磁干扰等特点。
-直流有刷伺服电机特点
-- 1.体积小、动作快反应快、过载能力大、调速范围宽
-- 2.低速力矩大, 波动小，运行平稳
-- 3.低噪音,高效率
-- 4.后端编码器反馈（选配）构成直流伺服等优点
-- 5.变压范围大，频率可调
+### Servo Motor Feature Comparison
+Brushless DC Servo Motor Features
+Low moment of inertia, low starting voltage, and low no-load current; Eliminating contact commutation significantly increases motor speed, reaching a maximum speed of 100,000 rpm; Brushless servo motors achieve speed, position, and torque control without the need for encoders when performing servo control; They are free of brush wear and, in addition to high speed, offer long life, low noise, and zero electromagnetic interference. Brushed DC Servo Motor Features
+- 1. Small size, fast action and response, high overload capacity, and wide speed range
+- 2. High low-speed torque, minimal fluctuation, and smooth operation
+- 3. Low noise and high efficiency
+- 4. Optional rear-end encoder feedback to form a DC servo motor
+- 5. Wide voltage range and adjustable frequency
 
-### 伺服电机对于普通电机的优点
-- 1、精度：实现了位置，速度和力矩的闭环控制；克服了步进电机失步的问题；
-- 2、转速：高速性能好，一般额定转速能达到2000～3000转；
-- 3、适应性：抗过载能力强，能承受三倍于额定转矩的负载，对有瞬间负载波动和要求快速起动的场合特别适用；
-- 4、稳定：低速运行平稳，低速运行时不会产生类似于步进电机的步进运行现象。适用于有高速响应要求的场合；
-- 5、及时性：电机加减速的动态相应时间短，一般在几十毫秒之内；
-- 6、舒适性：发热和噪音明显降低。
+### Advantages of Servomotors over Ordinary Motors
+- 1. Accuracy: Achieves closed-loop control of position, speed, and torque; overcomes the problem of step loss associated with stepper motors
+- 2. Speed: Excellent high-speed performance, with a rated speed generally reaching 2000-3000 rpm
+- 3. Adaptability: Strong overload resistance, capable of withstanding loads up to three times the rated torque, making it particularly suitable for applications with momentary load fluctuations and requiring fast starting
+- 4. Stability: Smooth low-speed operation without the stepping phenomenon associated with stepper motors. Suitable for applications requiring high-speed response;
+- 5. Timeliness: The motor's dynamic response time for acceleration and deceleration is short, generally within tens of milliseconds;
+- 6. Comfort: Heat generation and noise are significantly reduced.
 
-简单点说就是：平常看到的那种普通的电机，断电后它还会因为自身的惯性再转一会儿，然后停下。而伺服电机和步进电机是说停就停，说走就走，反应极快。但步进电机存在失步现象。
+Simply put, after power is removed, ordinary motors will continue to rotate for a while due to their own inertia before stopping. Servo motors and stepper motors, on the other hand, can stop and start instantly, with extremely fast response. However, stepper motors can lose steps.
 
-### 伺服电机的应用场景
-伺服电机的应用领域就太多了。只要是要有动力源的，而且对精度有要求的一般都可能涉及到伺服电机。如机床、印刷设备、包装设备、纺织设备、激光加工设备、机器人、自动化生产线等对工艺精度、加工效率和工作可靠性等要求相对较高的设备。
+### Application Scenarios of Servo Motors
+Servo motors have numerous applications. Any application that requires a power source and requires high precision generally involves a servo motor. Examples include machine tools, printing equipment, packaging equipment, textile equipment, laser processing equipment, robots, automated production lines, and other equipment that demand relatively high process precision, efficiency, and reliability.
