--- a/AI_Portable_Kit_EN/7-BasicFunctionApplication/7.1-myStudio/7.1.2-myStudio_flash_firmwares.md
+++ b/AI_Portable_Kit_EN/7-BasicFunctionApplication/7.1-myStudio/7.1.2-myStudio_flash_firmwares.md
@@ -1,37 +1,32 @@
-# 2 烧录与更新固件
+# 2 Burning and Updating the Firmware
 
-**[myStudio视频教程](https://www.bilibili.com/video/BV1Qr4y1N7B5/)**
+**[myStudio Video Tutorial](https://www.bilibili.com/video/BV1Qr4y1N7B5/)**
 
-## 2.1 烧录M5Stack-Basic固件
+## 2.1 Burning the M5Stack-Basic Firmware
 
-> **注意：Pi系列机械臂无需烧录M5Stack-Basic固件。**
+> **Note: Pi series robotic arms do not require burning the M5Stack-Basic firmware.**
 
-第一步: 与PC连接。M5Stack-Basic与PC连接方式如下图所示：
+Step 1: Connect to the PC. The M5Stack-Basic and PC connection diagram is shown below:
 
 ![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-6.png)
 
+Step 2: Select the port. After connecting, the connected development board will be displayed under the USB Port section in myStudio's Connection window (this example uses the myPalletizer 260M5 version):
 
-第二步：选择端口。连接之后，myStudio 的连接窗口的`USB端口`会显示出已连接的开发板（这里是以myPalletizer 260M5版本为例）：
+![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-7.png)
 
-![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-7png)
+Step 3: Click Login -> M5Stack-basic to flash the required firmware:
 
-
-
-第三步：点击`登录`->`M5Stack-basic`，即可烧录所需固件：
-
-> **注意：**280 PI/Jetson nano/Arduino版本没有M5Stack-basic，因此连接到myStudio之后会显示“无数据”。
+> **Note:** The 280 PI/Jetson nano/Arduino version does not include M5Stack-basic, so "No Data" will be displayed after connecting to myStudio.
 
 ![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-8.png)
 
 
-## 2.2 烧录 Atom 固件
+## 2.2 Flashing the Atom Firmware
 
-第一步：与PC连接。用 USB 连接末端的Atom。
+Step 1: Connect to your PC. Connect the Atom to the USB port.
 
 ![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-9.png)
 
-
-
-第二步：在`Board`一栏可以选择`ATOM`,侧边栏`Basic`就会出现 Atom 的固件。Atom 的固件就只有一个，点击烧入即可（下图以myCobot 280为例）。
+Step 2: Select ATOM in the Board column. The Atom firmware will appear in the Basic section of the sidebar. There is only one firmware for the Atom; click to flash it (the image below uses myCobot 280 as an example).
 
 ![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-10.png)
