--- a/AI_Portable_Kit_EN/1-ProductIntroduction/1.1-ProductIntroduction.md
+++ b/AI_Portable_Kit_EN/1-ProductIntroduction/1.1-ProductIntroduction.md
@@ -1,7 +1,7 @@
-# 产品简介
+# Product Introduction
 
-便携式人工智能教育实训箱是一款高度集成、即开即用的教学平台，采用模块化快插设计，兼具便携性与扩展性。设备内置Ubuntu系统，支持ROS1/ROS2，集成了机器视觉、传感控制、协作机器人等多项技术，覆盖多学科知识体系。
+The Portable AI Education Training Box is a highly integrated, ready-to-use teaching platform featuring a modular, plug-in design, ensuring both portability and scalability. It runs Ubuntu and supports ROS1/ROS2. It integrates multiple technologies, including machine vision, sensor control, and collaborative robotics, covering a multidisciplinary knowledge base.
 
 ![img.png](../resources/1-ProductIntroduction/AI-Portable.png)
 
-[下一页 →](1.2-ApplicationScenarios.md)
+[Next Page →](1.2-ApplicationScenarios.md)
