--- a/AI_Portable_Kit_EN/2-ProductFeature/2.4.1-adaptive_gripper.md
+++ b/AI_Portable_Kit_EN/2-ProductFeature/2.4.1-adaptive_gripper.md
@@ -1,89 +1,88 @@
-# 自适应夹爪
+# Adaptive Gripper
 
-**产品图示**
+**Product Image**
 
 ![pi](../resources/2-ProductFeature/2.4/2.4.1-1.png)
 
-**规格说明：**
+**Specifications:**
 
-| 名称         | myCobot 自适应夹爪                               |
-| ------------ | ------------------------------------------------------------------------------------------ |
-| 型号 model   | myCobot_gripperAg_white                                                                    |
-| 工艺         | ABS 注塑                                                                                   |
-| 颜色         | 白色                                                                                       |
-| 夹持范围     | 20-45mm                                                                                    |
-| 最大夹持力   | 150g                                                                                       |
-| 重复精度     | 1mm                                                                                        |
-| 使用寿命     | 一年                                                                                       |
-| 驱动方式     | 电动 electric                                                                              |
-| 传动方式     | 齿轮＋连杆                                                                                 |
-| 尺寸         | 112×94×50mm                                                                                |
-| 重量         | 110g                                                                                       |
-| 固定方式     | 乐高连接件                                                                                 |
-| 使用环境要求 | 常温常压                                                                                   |
-| 控制接口     | 串口控制                                                                                   |
-| 适用设备     | ER myCobot 280 系列 ，ER myPalletizer 260 系列， ER mechArm 270 系列 ，ER myBuddy 280 系列 |
+| Name | myCobot Adaptive Gripper |
+| ------------ | ---------------------------------------------------------------------------------------------- |
+| Model | myCobot_gripperAg_white |
+| Process | ABS Injection Molding |
+| Color | White |
+| Gripping Range | 20-45mm |
+| Maximum Gripping Force | 150g |
+| Repeatability | 1mm |
+| Service Life | One Year |
+| Drive Mode | Electric |
+| Transmission Mode | Gear + Connecting Rod |
+| Dimensions | 112 × 94 × 50mm |
+| Weight | 110g |
+| Mounting Method | LEGO Connector |
+| Operating Environment | Normal Temperature and Pressure |
+| Control Interface | Serial Control |
+| Applicable Devices | ER myCobot 280 Series, ER myPalletizer 260 Series, ER mechArm 270 Series, ER myBuddy 280 Series |
 
-**自适应夹爪：** 夹取物体使用
+**Adaptive Gripper:** For gripping objects
 
-**简介**
+**Introduction**
 
-- 夹爪是一种可以实现类似人手功能的机器人部件。其结构较复杂、抓取物体牢固、不易掉落、易操作的优点。夹爪套件包括夹爪配件和乐高科技件，通过可编程系统控制机械臂的末端执行器，实现物件的抓取、多点定位等功能。在所有的开发环境下都可以使用夹爪，如 ROS、Arduino、Roboflow 等。
+- A gripper is a robotic component that performs functions similar to a human hand. Its complex structure offers advantages such as a secure grip, resistance to drops, and ease of operation. The gripper kit includes the gripper components and LEGO technology. A programmable system controls the robotic arm's end effector, enabling functions such as gripping and multi-point positioning. The gripper can be used in all development environments, including ROS, Arduino, and Roboflow.
 
-**工作原理**
+**Operating Principle**
 
-- 由电机驱动，夹爪的指面作直线往复运动来实现张开或闭合动作的，电动夹爪的加减速可控，对工件的冲击可以减至最小，定位点位可控，夹持可控。
+- Driven by a motor, the gripper's finger surface moves in a linear reciprocating motion to open and close. The electric gripper's acceleration and deceleration are controllable, minimizing impact on the workpiece. The positioning point and gripping position are controllable.
 
-**适用物体**
+**Applicable Objects**
 
-- 小方块
-- 小球
-- 长条物体
+- Small cubes
+- Small balls
+- Long objects
 
-**安装使用**
+**Installation and Usage**
 
-- 检查配件包东西是否齐全：乐高连接件、带连接线的夹爪、连接线延长线
-  ![alt text](../resources/2-ProductFeature/2.4/2.4.1-2.png)
+- Check that the accessories package contains the following: LEGO connector, gripper with cable, and extension cable.
 
-- 夹爪安装：
+- Gripper Installation:
 
-  - 结构安装：
+  - Structural Installation:
 
-    1. 将乐高连接件插入夹爪预留的插孔中，根据需要可以选择两个不同方向进行安装：
+    1. Insert the LEGO connector into the pre-installed socket on the gripper. You can choose to install it in two different orientations depending on your needs:
 
-       > ![](../resources/2-ProductFeature/2.4/2.4.1-3.png)
-   
+    > ![](../resources/2-ProductFeature/2.4/2.4.1-3.png)
 
-    2. 将插好连接件的夹爪对准机械臂末端插孔插入：
+    2. Align the gripper with the connector inserted into the socket on the end of the robot arm and insert it:
 
-       > ![](../resources/2-ProductFeature/2.4/2.4.1-4.png)
+    > ![](../resources/2-ProductFeature/2.4/2.4.1-4.png)
 
-  - 电气连接：
+  - Electrical Connections:
 
-    1. 将延长线与夹爪连接：
-       > ![](../resources/2-ProductFeature/2.4/2.4.1-5.png)
-    2. 插入机械臂控制接口：
-       > ![](../resources/2-ProductFeature/2.4/2.4.1-6.png)  
+    1. Connect the extension cable to the gripper:
 
-       > ![](../resources/2-ProductFeature/2.4/2.4.1-7.png)  
+    ![](../resources/2-ProductFeature/2.4/2.4.1-5.png)
+    2. Inserting the Robot Arm Control Interface:
+    > ![](../resources/2-ProductFeature/2.4/2.4.1-6.png)
 
-<br>
+    > ![](../resources/2-ProductFeature/2.4/2.4.1-7.png)
 
-- 编程开发：
+    <br>
 
-  > 使用 python 对夹爪进行编程开发
+- Programming Development:
 
-     - M5 版本：
+> Using Python to Program the Gripper
+
+  - M5 Version:
 
      ```python
      from pymycobot import MyCobot280
      import time
 
-     # 初始化一个MyCobot280对象
+     # Initialize a MyCobot280 object
      mc = MyCobot280("COM3", 115200)
 
-     # 以下三种方式均可控制夹爪打开-关闭-打开
-     # 方式一：
+     # The following three methods can all control the gripper's open-close-open state.
+     # Method 1:
      mc.set_gripper_state(0, 80)
      time.sleep(3)
      mc.set_gripper_state(1, 80)
@@ -91,7 +90,7 @@
      mc.set_gripper_state(0, 80)
      time.sleep(3)
 
-     # 方式二：
+     # Method 2:
      # mc.set_gripper_value(100, 80)
      # time.sleep(3)
      # mc.set_gripper_value(0, 80)
@@ -99,7 +98,7 @@
      # mc.set_gripper_value(100, 80)
      # time.sleep(3)
 
-     # 方式三：
+     # Method 3:
      # mc.set_encoder(7, 2048)
      # time.sleep(3)
      # mc.set_encoder(7, 1500)
@@ -108,18 +107,18 @@
      # time.sleep(3)
      ```
 
-     - 280-Pi 版本：
+     - 280-Pi version:
 
      ```python
      from pymycobot import MyCobot280
-     from pymycobot import PI_PORT, PI_BAUD  # 当使用树莓派版本的mycobot时，可以引用这两个变量进行MyCobot280初始化
+     from pymycobot import PI_PORT, PI_BAUD  # When using the Raspberry Pi version of mycobot, you can reference these two variables to initialize MyCobot280
      import time
 
-     # 初始化一个MyCobot280对象
+     # Initialize a MyCobot280 object
      mc = MyCobot280(PI_PORT, PI_BAUD)
 
-     # 以下三种方式均可控制夹爪打开-关闭-打开
-     # 方式一：
+     # The following three methods can all control the gripper's open-close-open state.
+     # Method 1:
      mc.set_gripper_state(0, 80)
      time.sleep(3)
      mc.set_gripper_state(1, 80)
@@ -127,7 +126,7 @@
      mc.set_gripper_state(0, 80)
      time.sleep(3)
 
-     # 方式二：
+     # Method 2:
      # mc.set_gripper_value(100, 80)
      # time.sleep(3)
      # mc.set_gripper_value(0, 80)
@@ -135,7 +134,7 @@
      # mc.set_gripper_value(100, 80)
      # time.sleep(3)
 
-     # 方式三：
+     # Method 3:
      # mc.set_encoder(7, 2048)
      # time.sleep(3)
      # mc.set_encoder(7, 1500)
@@ -144,10 +143,10 @@
      # time.sleep(3)
      ```
 
-    保存文件并关闭，返回命令行终端，输入：
+    Save the file and close it, then return to the command line terminal and enter:
 
      ```bash
      python grip.py
      ```
 
-     可以看到夹爪打开-关闭-打开
+     You can see the jaws open-close-open
