--- a/AI_Portable_Kit_EN/2-ProductFeature/2.4.2-five_hand.md
+++ b/AI_Portable_Kit_EN/2-ProductFeature/2.4.2-five_hand.md
@@ -1,82 +1,86 @@
-# 灵巧手
+# Dexterous Hand
 
-**产品图示**
+**Product Image**
 
 ![pi](../resources/2-ProductFeature/2.4/2.4.2-1.png)
 
-**规格说明：**
+**Specifications:**
 
-| 名称         | **mycobot灵巧手爪**                                          |
+| Name | **mycobot Dexterous Gripper** |
 | ------------ | ------------------------------------------------------------ |
-| 型号         | 灵巧手                                                       |
-| 材料         | 3D打印                                                       |
-| 尺寸         | 112×94×50mm                                                  |
-| 颜色         | 白                                                           |
-| 传动方式        | 齿轮＋连杆                                                |
-| 夹持范围     | 20-45mm                                                      |
-| 最大夹持力   | 100g                                                   |
-| 固定方式     | 螺丝固定                                               |
-| 使用环境要求 | 常温常压                                                     |
-| 控制接口 | 串口控制                                                     |
-| 适用设备     | ER myCobot 280 系列、 ER mechArm 270 系列、 ER myPalletizer 260 系列 |
+| Model | Dexterous Hand |
+| Material | 3D Printed |
+| Dimensions | 112 × 94 × 50 mm |
+| Color | White |
+| Transmission Method | Gear + Connecting Rod |
+| Clamping Range | 20-45 mm |
+| Maximum Clamping Force | 100 g |
+| Fixing Method | Screw Fixing |
+| Operating Environment | Normal Temperature and Pressure |
+| Control Interface | Serial Control |
+| Applicable Devices | ER myCobot 280 Series, ER mechArm 270 Series, ER myPalletizer 260 Series |
 
-**灵巧手：** 夹持物品时使用
+**Dexterous Hand:** Used for gripping objects
 
-**简介**
+**Introduction**
 
-- 夹爪是一种可以实现类似人手功能的机器人部件。其结构较复杂、抓取物体牢固、不易掉落、易操作的优点。夹爪套件包括夹爪配件和乐高科技件，通过可编程系统控制机械臂的末端执行器，实现物件的抓取、多点定位等功能。
+- A gripper is a robotic component that performs functions similar to a human hand. Its complex structure offers advantages such as a secure grip, resistance to drops, and ease of operation. The gripper kit includes the gripper components and LEGO technology. A programmable system controls the end effector of the robotic arm, enabling functions such as gripping and multi-point positioning.
 
-**工作原理**
-- 由电机驱动，夹爪的指面作直线往复运动来实现张开或闭合动作的，电动夹爪的加减速可控，对工件的冲击可以减至最小，定位点位可控，夹持可控
+**Operating Principle**
+- Driven by a motor, the gripper's finger surfaces move in a linear reciprocating motion to open and close. The electric gripper's acceleration and deceleration are controllable, minimizing impact on the workpiece. The positioning points and gripping position are controllable.
 
-**适用物体**
+**Applicable Objects**
 
-- 小方块
+- Small cubes
 
-- 小球
+- Small balls
 
-- 长条物体
+- Long objects
 
-## 夹爪安装：
-  将乐高连接件插入夹持器孔位中：
-  ![](../resources/2-ProductFeature/2.4/2.4.2-2.png)
+## Gripper Installation
 
-  ![](../resources/2-ProductFeature/2.4/2.4.2-3.png)
+- Insert the LEGO connector into the gripper hole:
 
-**电气连接**
-  将安装好连接件的夹持器插入机械臂末端  
-  ![](../resources/2-ProductFeature/2.4/2.4.2-4.png)
+![](../resources/2-ProductFeature/2.4/2.4.2-2.png)
 
-## python编程控制
+![](../resources/2-ProductFeature/2.4/2.4.2-3.png)
 
-+ M5 版本
+**Electrical Connection**
+
+- Insert the gripper with the connector installed into the end cap of the robotic arm.
+
+![](../resources/2-ProductFeature/2.4/2.4.2-4.png)
+
+Python Programming Control
+
++ M5 Version
 
 ```python
  from pymycobot.mycobot280 import MyCobot280
  import time
 
- # 初始化一个MyCobot280对象
+ # Initialize a MyCobot280 object
  mc = MyCobot280("COM3", 115200)
 
- mc.set_encoder(7,2048,40)#张开
+ mc.set_encoder(7,2048,40)  # Open
  time.sleep(2)
- mc.set_encoder(7,2300,40)#握紧
+ mc.set_encoder(7,2300,40)  # Hold tight
  time.sleep(2)
- mc.set_encoder(7,2048,40)#握紧
+ mc.set_encoder(7,2048,40)  # Hold tight
 ```
 
-+ Pi 版本
++ Pi version
 
 ```python
-     from pymycobot.mycobot280 import MyCobot280
-     from pymycobot import PI_PORT, PI_BAUD  # 当使用树莓派版本的mycobot时可以引用这两个变量进行MyCobot初始化
-     import time
-        
-     # 初始化一个MyCobot280对象
-     mc = MyCobot280(PI_PORT, PI_BAUD)
-     mc.set_encoder(7,2048,40)#张开
-     time.sleep(2)
-     mc.set_encoder(7,2300,40)#握紧
-     time.sleep(2)
-     mc.set_encoder(7,2048,40)#握紧
+from pymycobot.mycobot280 import MyCobot280
+from pymycobot import PI_PORT, PI_BAUD  # When using the Raspberry Pi version of mycobot, you can reference these two variables to initialize MyCobot
+import time
+  
+# Initialize a MyCobot280 object
+mc = MyCobot280(PI_PORT, PI_BAUD)
+mc.set_encoder(7,2048,40)  # Open
+time.sleep(2)
+mc.set_encoder(7,2300,40)  # Hold tight
+time.sleep(2)
+mc.set_encoder(7,2048,40)  # Hold tight
 ```
