--- a/AI_Portable_Kit_EN/2-ProductFeature/2.4.3-pump.md
+++ b/AI_Portable_Kit_EN/2-ProductFeature/2.4.3-pump.md
@@ -1,109 +1,110 @@
-# 垂直吸泵V2.0
+# Vertical Suction Pump V2.0
 
-**产品图示**
+**Product Image**
 
 > ![pi](../resources/2-ProductFeature/2.4/2.4.3-1.png)
 
-**规格说明**
+**Specifications**
 
-| 名称         | myCobot 垂直吸泵 V2.0                                                                      |
-| ------------ | ------------------------------------------------------------------------------------------ |
-| 型号         | myCobot_suctionPump_V2.0_grey                                                              |
-| 材料         | ABS 注塑                                                                                   |
-| 颜色         | 白色                                                                                       |
-| 尺寸         | 吸泵盒：72x52x37 吸泵末端：63x24.5x26.7                                                    |
-| 吸盘数量     | 1                                                                                          |
-| 吸盘尺寸     | 直径 20mm                                                                                  |
-| 吸取重量     | 150g                                                                                       |
-| 动力源设备   | 吸泵盒                                                                                     |
-| 使用寿命     | 一年                                                                                       |
-| 固定方式     | 乐高连接件                                                                                 |
-| 控制接口     | IO 控制                                                                                    |
-| 使用环境要求 | 常温常压                                                                                   |
-| 适用设备     | ER myCobot 280 系列， ER myPalletizer 260 系列 ，ER mechArm 270 系列 ，ER myBuddy 280 系列 |
+| Name | myCobot Vertical Suction Pump V2.0 |
+| ------------ | ---------------------------------------------------------------------------------------------- |
+| Model | myCobot_suctionPump_V2.0_grey |
+| Material | ABS Injection Molding |
+| Color | White |
+| Dimensions | Pump Box: 72x52x37mm Pump Tip: 63x24.5x26.7mm |
+| Number of Suction Cups | 1 |
+| Suction Cup Size | Diameter 20mm |
+| Suction Weight | 150g |
+| Power Source | Pump Box |
+| Service Life | One Year |
+| Mounting Method | LEGO Connector |
+| Control Interface | IO Control |
+| Operating Environment Requirements | Normal Temperature and Pressure |
+| Applicable Equipment | ER myCobot 280 Series, ER myPalletizer 260 Series, ER mechArm 270 Series, ER myBuddy 280 Series |
 
-**吸泵** : 吸附物体使用
+**Suction Pump**: Used for suctioning objects
 
-**简介**
+**Introduction**
 
-- 吸泵，即真空吸附泵，具备一进一出的抽气嘴、排气嘴各一个，它结构简单、体积小巧、使用方便、噪音较低、并有良好的自吸能力等优点。通过控制吸泵套件作为机械臂的末端执行器，执行吸附物体的功能。
+- The suction pump, also known as a vacuum suction pump, features an inlet and outlet nozzle, an outlet nozzle, and a simple structure, compact size, ease of use, low noise, and excellent self-priming capability. The suction pump kit acts as the end effector of the robotic arm to perform the suctioning function.
 
-- 吸泵配件：电源线 x1、杜邦线 x10、一入两出连接线 x1、乐高科技件 x 若干
+- Suction Pump Accessories: Power Cord x1, DuPont Cables x10, One-Input Two-Output Connecting Cable x1, Several Lego Technic Pieces
 
-**工作原理**
+**Working Principle**
 
-- 吸取物品时：气泵启动抽气吸附物品即可停止，短时不会漏气。
-- 放下物品时：电子阀门启动，泄气阀门打开，空气进入真空吸盘脱离被吸物品。
+- When suctioning an object: The pump activates to suck air from the object and then stops, preventing air leakage.
+- When releasing an object: The electronic valve activates, the air release valve opens, and air enters the vacuum cup and releases the object.
 
-**适用物体**
+**Applicable Objects**
 
-- 纸片/塑料片
-- 平面光滑物体
-- 卡片等
+- Paper/Plastic Sheets
+- Flat, Smooth Objects
+- Cards, etc.
 
 > ![吸泵2.0接线图](../resources/2-ProductFeature/2.4/2.4.3-2.png)
 
-**安装使用**
+**Installation and Use**
 
-- 检查配件包东西是否齐全：乐高连接件、杜邦线、双头吸泵
- > ![](../resources/2-ProductFeature/2.4/2.4.3-3.png)
+- Check that the accessories package contains all the necessary items: LEGO connectors, DuPont cables, and a dual-head suction pump.
 
-- 双头吸泵安装：
+> ![](../resources/2-ProductFeature/2.4/2.4.3-3.png)
 
-  结构安装：
+- Dual-head suction pump installation:
 
-  将乐高连接件插入吸泵上预留的插孔中：
+Structural installation:
+
+Insert the LEGO connectors into the designated sockets on the suction pump.
 
 > ![](../resources/2-ProductFeature/2.4/2.4.3-4.png)
 
-  将插好连接件的吸泵对准机械臂末端插孔插入：
+  Align the suction pump with the connector plugged in with the socket at the end of the robotic arm and insert it:
 
 > ![](../resources/2-ProductFeature/2.4/2.4.3-5.png)
 
-  - 电气连接：
+  - Electrical connections:
   
-    选出公-母杜邦线，母头端插入吸泵方盒上标有引脚的插口：
+    Select a male-female Dupont cable and insert the female end into the marked pin socket on the suction pump box:
   
-    > 公-母杜邦线：
+    > Male-female DuPont wire:
     > ![](../resources/2-ProductFeature/2.4/2.4.3-6.png)
-    > 注意图中的杜邦线颜色和引脚的对应关系：
+    > Note the correspondence between the DuPont wire colors and pins in the figure:
     > ![](../resources/2-ProductFeature/2.4/2.4.3-7.png)
   
-    1. 公头按给出的对应关系插入机械臂底座引脚：
+    1. Insert the male connector into the pins on the base of the robotic arm according to the given correspondence:
        ![](../resources/2-ProductFeature/2.4/2.4.3-8.png)
     
-       > 左侧为吸泵引脚，右侧为机械臂引脚  
+       > The left side is the suction pump pin, and the right side is the robotic arm pin
        > GND -> GND  
        > 5V -> 5V  
        > G2 -> 21  
        > G5 -> 20
   
-  - 编程开发：
-> 使用 python 对吸泵进行编程开发
+  - Programming Development:
 
-> 代码如下：
+> Using Python to program a suction pump
 
-- 280-M5 版本：
-    
+> The code is as follows:
+
+- 280-M5 version:    
     ```python
     from pymycobot.mycobot280 import MyCobot280
     import time
     
-    # 初始化一个MyCobot280对象
+    # Initialize a MyCobot280 object
     mc = MyCobot280("COM3", 115200)
     
-    # 开启吸泵
+    # Turn on the suction pump
     def pump_on():
-        # 打开电磁阀
+        # Open the solenoid valve
         mc.set_basic_output(5, 0)
         time.sleep(0.05)
     
-    # 停止吸泵
+    # Stop priming the pump
     def pump_off():
-        # 关闭电磁阀
+        # Close the solenoid valve
         mc.set_basic_output(5, 1)
         time.sleep(0.05)
-        # 泄气阀门开始工作
+        # The deflation valve starts working
         mc.set_basic_output(2, 0)
         time.sleep(1)
         mc.set_basic_output(2, 1)
@@ -116,37 +117,37 @@
     pump_off()
     time.sleep(3)
     
-    GPIO.cleanup() # 释放 pin channel
+    GPIO.cleanup() # release pin channel
     ```
     
     - 280-Pi 版本：
     
     ```python
     from pymycobot.mycobot280 import MyCobot280
-    from pymycobot import PI_PORT, PI_BAUD  # 当使用树莓派版本的mycobot时，可以引用这两个变量进行MyCobot初始化
+    from pymycobot import PI_PORT, PI_BAUD  # When using the Raspberry Pi version of mycobot, you can reference these two variables to initialize MyCobot
     import time
     import RPi.GPIO as GPIO
     
-    # 初始化一个MyCobot对象
+    # Initialize a MyCobot280 object
     mc = MyCobot280(PI_PORT, PI_BAUD)
     
-    # 初始化
+    # Initialization
     GPIO.setmode(GPIO.BCM)
-    # 引脚20/21分别控制电磁阀和泄气阀门
+    # Pins 20/21 control the solenoid valve and the bleed valve, respectively
     GPIO.setup(20, GPIO.OUT)
     GPIO.setup(21, GPIO.OUT)
     
-    # 开启吸泵
+    # Turn on the suction pump
     def pump_on():
-        # 打开电磁阀
+        # Open the solenoid valve
         GPIO.output(20，0)
     
-    # 停止吸泵
+    # Stop priming the pump
     def pump_off():
-        # 关闭电磁阀
+        # Close the solenoid valve
         GPIO.output(20，1)
         time.sleep(0.05)
-        # 打开泄气阀门
+        # Open the vent valve
         GPIO.output(21，0)
         time.sleep(1)
         GPIO.output(21，1)
@@ -159,5 +160,5 @@
     pump_off()
     time.sleep(3)
     
-    GPIO.cleanup() # 释放 pin channel
+    GPIO.cleanup() # release pin channel
     ```
