--- a/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.5-yolov5_recognition.md
+++ b/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.5-yolov5_recognition.md
@@ -1,16 +1,16 @@
-# 二维码识别
+# QR Code Recognition
 
-系统开机后，会自动启动程序，该程序支持启动颜色识别、形状识别、特征点图像识别、AR二维码识别、YOLOv5 图像识别、AiKit_UI程序、手柄控制程序、myCobot自适应夹爪案例、myCobot五指灵巧手案例以及stag码跟踪案例。
+After the system boots up, the program automatically launches. This program supports color recognition, shape recognition, feature point image recognition, AR QR code recognition, YOLOv5 image recognition, AiKit_UI, handle control, myCobot adaptive gripper examples, myCobot five-finger dexterous hand examples, and stag code tracking examples.
 
->>注意：M5版本机器使用前需选择设备型号，PI版本则不需要。
+>>Note: The M5 version requires a device model selection before use; the PI version does not require one.
 
 ![](../resources/5-BasicAlgorithmFunction/5.1-1.png)
 
-根据终端信息提示，选择对应机械臂型号，如果是PI版本设备，则忽略此步骤。这里以280M5为例，输入1：
+Follow the terminal prompts and select the corresponding robot arm model. Skip this step if using the PI version. Using the 280M5 as an example, enter 1:
 
 ![](../resources/5-BasicAlgorithmFunction/5.1-2.png)
 
-**按下数字5，启动yolov5识别功能。将yolov5图像木块放置识别区域，根据终端输出信息提示，鼠标光标放置摄像头窗口后，键盘按下字母z，机械臂将执行抓取流程。。**
+**Press 5 to start the YOLOv5 recognition function. Place the wooden block in the Yolov5 image in the recognition area. Following the prompts in the terminal output, place the mouse cursor on the camera window and press the letter z on the keyboard. The robotic arm will then execute the grabbing process.**
 
 ![](../resources/5-BasicAlgorithmFunction/5.5-1.png)
 
