--- a/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.2-Serial_robots.md
+++ b/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.2-Serial_robots.md
@@ -1,74 +1,74 @@
-## 机器人知识
+## Robot knowledge
 
->本章节摘选自《机器人学导论》J.Craig著。希望了解全文的朋友可以通过网络进行购买
+> This chapter is excerpted from Introduction to robotics mechanics and control by J.Craig. If you want to read more about it, please buy it online.
 
-### 1 机器人背景
-工业自动化的历史是以技术手段的快速更新为特征的。这种自动化技术的更新不论是看作世界经济发展的诱因还是结果，都和世界经济密切相关。工业机器人在20世纪60年代毫无疑问是一种独特的设备＂，将其和计算机辅助设计（CAD)系统、计算机辅助制造（CAM系统结合在一起应用，这是现代制造业自动化的最新发展趋势。这些技术正在引导工业自动化向一个新的领域过渡。
+### 1 Robotics Background
 
-操作臂是工业机器人中最重要的一种类型。操作臂是否可称作工业机器人受到争议。如图所示的装备通常被认为属于工业机器人的范畴，而数控（NC)磨床则通常在此范畴之外。
+The history of industrial automation is characterized by the rapid evolution of technological approaches. Whether viewed as a cause or consequence of global economic development, these technological advancements are closely intertwined with the global economy. Industrial robots were undoubtedly unique devices in the 1960s. Their integration with computer-aided design (CAD) and computer-aided manufacturing (CAM) systems is the latest development in modern manufacturing automation. These technologies are leading industrial automation into a new realm.
 
->放置一个ABB机械臂
+Manipulators are the most important type of industrial robot. Whether they can be called industrial robots is controversial. The equipment shown in the figure is generally considered to fall under the category of industrial robots, while numerically controlled (NC) grinding machines are generally excluded.
 
-一般来说，对于操作臂的机构和控制理论的研究并不是一门新的科学，它只不过是对传统学科理论的一种综合。机械工程理论为研究静态和动态环境下的操作臂提供了方法论；数学方法用于描述机械手空间运动及其特性；控制理论为实现期望运动或力提供了各种设计方法和评估算法；电气工程技术可用于传感器及工业机器人接口的设计；计算机技术提供了执行期望任务所需的编程平台。
+>Place an ABB robotic arm
 
-### 2 机器人基本概念描述
+Generally speaking, the study of the mechanism and control theory of manipulators is not a new discipline; it is simply a synthesis of traditional disciplines. Mechanical engineering theory provides a methodology for studying manipulators in static and dynamic environments; mathematical methods are used to describe the spatial motion and characteristics of manipulators; control theory provides various design methods and evaluation algorithms for achieving desired motions or forces; electrical engineering techniques are used to design sensors and industrial robot interfaces; and computer technology provides the programming platform necessary to perform desired tasks.
 
-**机械臂**
-机械臂也可以称之为工业机器人、协作机器人、操作臂、仿生手臂、串联手臂等。
+### 2 Basic Concepts of Robotics
 
-**位姿描述**
-在机器人研究中，我们通常在三维空间中研究物体的位置。这里所说的物体既包括操作臂的杆件、零部件和抓持工具，也包括操作臂工作空间内的其他物体。通常这些物体可用两个非常重要的特性来描述：位置和姿态。自然我们会首先研究如何用数学方法表示和计算这些参量。
+**Robotic Arm**
 
-为了描述空间物体的位姿，我们一般先将物体固置于一个空间坐标系，即参考系中，然后我们就在这个参考坐标系中研究空间物体的位置和姿态。 
+A robotic arm can also be called an industrial robot, collaborative robot, manipulator, bionic arm, or serial arm.
 
+**Position Description**
 
-**操作臂正运动学**<br>
-运动学研究物体的运动，而不考虑引起这种运动的力。在运动学中，我们研究位置、速度、加速度和位置变量对于时间或者其他变量的高阶微分。这样，操作臂运动学的研究对象就是运动的全部几何和时间特性。几乎所有的操作臂都是由刚性连杆组成的，相邻连杆间由可作相对运动的关节连接。这些关节通常装有位置传感器，用来测量相邻杆件的相对位置。如果是转动关节，这个位移被称为关节角。一些操作臂含有滑动（或移动）关节，那么两个相邻连杆的位移是直线运动，有
-时将这个位移称为**关节偏距**。<br>
-在操作臂运动学的研究中一个典型的问题是操作臂正运动学。计算操作臂末端执行器的位置和姿态是一个静态的几何问题。具体来讲，给定一组关节角的值，正运动学问题是计算工具坐标系相对于基坐标系的位置和姿态。一般情况下，我们将这个过程称为从关节空间描述到笛卡儿空间描述的操作臂位置表示。
+In robotics research, we typically study the position of objects in three-dimensional space. These objects include the manipulator's rods, components, and grippers, as well as other objects within the manipulator's workspace. These objects can typically be described by two key properties: position and posture. Naturally, we first study how to represent and calculate these parameters mathematically.
 
-**自由度**<br>的数目是操作臂中具有独立图1-5 在坐标系（参考系）中的操作臂位置变量的数目，这些位置变量确定了机构中所有部件的位置。自由度对所有的机构具有普遍意义。例如，四杆机构只有一个自由度（尽管它有三个可以运动的杆件）。对于一个典型的工业机器人来讲，由于操作臂大都是开式的运动链，而且每个关节位置都由一个独立的变量
-定义，因此关节数目等于自由度数目。
+To describe the position and posture of an object in space, we typically first place the object in a fixed spatial coordinate system, or reference system. We then study the object's position and posture within this reference system.
 
-**末端执行器**<br>安装在操作臂的自由端。根据机器人的不同应用场合，末端执行器可以是一个夹具、一个焊枪、一个电磁铁或是其他装置。我们通常用附着于末端执行器上的工具坐标系描述操作臂的位置，与工具坐标系相对应的是与操作臂固定底座相联的**基坐标系**。
+**Forward Kinematics of Manipulators**<br>
+Kinematics studies the motion of an object without considering the forces causing that motion. In kinematics, we study position, velocity, acceleration, and higher-order derivatives of position variables with respect to time or other variables. Thus, the kinematics of manipulators study the full geometric and temporal characteristics of motion. Almost all manipulators are composed of rigid links connected by joints that allow relative motion. These joints are usually equipped with position sensors that measure the relative position of the adjacent links. In the case of rotational joints, this displacement is called the joint angle. Some manipulators contain sliding (or moving) joints. ) joints, then the displacement of two adjacent links is linear motion, sometimes referred to as the joint offset.
 
-**操作臂逆运动学**<br>
-给定操作臂末端执行器的位置和姿态，计算所有可达给定位置和姿态的关节角。
+A typical problem in manipulator kinematics research is the forward kinematics of the manipulator. Computing the position and orientation of the manipulator's end effector is a static geometric problem. Specifically, given a set of joint angles, the forward kinematics problem involves calculating the position and orientation of the tool coordinate system relative to the base coordinate system. This process is generally referred to as converting the manipulator's position representation from joint space to Cartesian space.
 
-### 3 空间描述
-**位置**
+The number of degrees of freedom (DOF) is the number of independent degrees of freedom (DOFs) in the manipulator. Figure 1-5 The number of position variables of the manipulator in a coordinate system (reference frame) that determine the positions of all components in the mechanism. Degrees of freedom are universal to all mechanisms. For example, a four-bar linkage has only one degree of freedom (even though it has three movable members). For a typical industrial robot, since the manipulator is mostly an open kinematic chain, and each joint position is defined by an independent variable, the number of joints equals the number of degrees of freedom.
 
-一旦建立了坐标系，我们就能用一个3x1的位置矢量对世界坐标系中的任何点进行定位。因为经常在世界坐标系中还要定义许多坐标系，因此必须在位置矢量上附加一信息，表明是在哪一个坐标系被定义的。在本书，位置矢量用一个前置的上标来表明其参考的坐标系。
+The **end effector** is attached to the free end of the manipulator. Depending on the robot's application, the end effector can be a gripper, a welding gun, an electromagnet, or other device. The position of the manipulator is typically described using a tool coordinate system attached to the end effector. The tool coordinate system corresponds to the **base coordinate system** associated with the manipulator's fixed base.
+
+**Manipulator Inverse Kinematics**: Given the position and orientation of the manipulator's end effector, calculate all joint angles that can achieve the given position and orientation.
+
+### 3 Spatial Description
+
+**Position**
+
+Once a coordinate system is established, we can locate any point in the world coordinate system using a 3x1 position vector. Because multiple coordinate systems are often defined within the world coordinate system, the position vector must be appended with information indicating the coordinate system in which it is defined. In this book, position vectors are prefixed with a superscript to indicate the coordinate system they refer to.
 
 ![rotation](../resources/6-RoboticArmKnowledge/6.2-1.png)
 
+A coordinate system {A} is represented by three mutually orthogonal unit vectors with arrows. A point AP is represented by a vector, which can be equivalently considered a position in space, or simply represented by a sequence of three numbers. Vector Diagram 2-1: Vectors relative to a coordinate system (example). The individual elements are designated by the subscripts x, y, and z:
 
-用三个相互正交的带有箭头的单位矢量来表示一个坐标系｛A}.用一个矢量来表示一个点AP,并且可等价地被认为是空间的一个位置，或者简单地用一组有序的三个数字来表示。矢量图2-1 相对于坐标系的矢量（示例）的各个元素用下标x,y和z来标明：
+**Posture**
 
+We often find it necessary not only to represent points in space but also to describe the posture of objects in space. For example, if the vector "P" in Figure 2-2 directly identifies a point between the fingertips of the manipulator, the position of the hand can only be fully determined if the pose of the hand is known. Assuming the manipulator has a sufficient number of joints, the hand can assume any pose, while the position of the point between the fingertips remains unchanged. To describe the pose of an object, we fix a coordinate system on the object and express this coordinate system relative to a reference system. In Figure 2-2, the coordinate system {B} is fixed to the object in some way. The description of {B} relative to {A} is sufficient to express the pose of the object (A).
 
-**姿态**
+**Coordinate System**
+A reference system can be described by the relationship of one coordinate system to another. A reference system encompasses the concepts of position and pose, and is often considered a combination of these two concepts. Position can be expressed by a reference system whose rotation matrix is ​​the identity matrix and whose position vector in this reference system specifies the position of the described point. Similarly, if the position vector in the reference system is the zero vector, it represents the pose.
 
-我们发现不仅经常需要表示空间的点，还经常需要描述空间中物体的姿态。例如，如果在图2-2中矢量“P直接确定了在操作手指端之间的某点，只有当手的姿态已知后，手的位置才能完全被确定下来。假定操作手有足够数量的关节，则操作手可有任意的姿态，而该点在指端之间的位置可保持不变。为了描述物体的姿态，我们将在物体上固定一个坐标系并且给出此坐标系相对于参考系的表达。在图2-2中，已知坐标系｛B}以某种方式固定在物体上。｛B}相对于｛A}中的描述就足以表示出物体（A)的姿态。
+### 4 DH Parameters
 
+**Definition**
+For revolute joint n, set 0 = 0.0. At this point, the X-axis and X,-axis are in the same direction. The origin of the coordinate system (N) is selected so that d. = 0.0. For translatory joint n, set the directions of the 8 axes so that 0. = 0.0. When d. = 0.0, the origin of the coordinate system (N) is located at the intersection of the XN-1 axis and the joint axis n.
 
-**坐标系**
-一个参考系可以用一个坐标系相对于另一坐标系的关系来描述。参考系包括了位置和姿态两个概念，大多数情况下被认为是这两个概念的结合。位置可由一个参考系表示，这个参考系中的旋转矩阵是单位阵，并且这个参考系中的位置矢量确定了被描述点的位置。同样，如果参考系中的位置矢量是零矢量，那么它表示的就是姿态。
+Summary of Link Parameters in the Link Coordinate System: If the link coordinate system is fixed to the link according to the above rules, the link parameters can be defined as follows:
 
-### 4 DH参数
-**定义**
-对于转动关节n,设定0=0.0,此时X轴与X,轴的方向相同，选取坐标系（N)的原点位置使之满足d.=0.0.对于移动关节n,设定8轴的方向使之满足0.=0.0.当d.=0.0时，选取坐标系｛N)的原点位于XN-1轴与关节轴n的交点位置。
+- a_i-1: Along x_i-1: The distance from z_i-1 to z_i
+- alpha_i-1: Around x_i-1: The angle from z_i-1 to z_i
+- d_i: Along z_i: The distance from x_i-1 to x_i
+- theta_i : Around z_i : From x_i-1 to x_i
 
-在连杆坐标系中对连杆参数的归纳如果按照上述规定将连杆坐标系固连于连杆上时，连杆参数可以定义如下：
-- a_i-1		：沿着x_i-1	:  从z_i-1	到 z_i	的距离
-- alpha_i-1	：绕着x_i-1	：从z_i-1 	到 z_i 	的角度
-- d_i 		：沿着z_i 		：从x_i-1 	到 x_i 	的距离
-- theta_i	：绕着z_i		：从x_i-1	到x_i		的角度
-
-这里有一篇文章可以
+Here's an article that can help
 [https://blog.csdn.net/hitgavin/article/details/104442034](https://blog.csdn.net/hitgavin/article/details/104442034)
 
 
-**myCobot DH参数**
+**myCobot DH parameters**
 
 |Joint      | alpha|a|d|theta|offset|
 |---           | :---:| :---:| :---:| :---:| :---:|
