--- a/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.3-electric_knowledge.md
+++ b/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.3-electric_knowledge.md
@@ -1,65 +1,68 @@
-# 单片机与微控制器
+# Microcontrollers and Microcontrollers
 
 ![embeded](../resources/6-RoboticArmKnowledge/6.3-1.png)
 
+## Introduction
 
-##  简介  
+A microcontroller (MCU) is an integrated circuit chip that uses very large-scale integrated circuit technology to integrate a central processing unit (CPU) with data processing capabilities, random access memory (RAM), read-only memory (ROM), various I/O ports and interrupt systems, timers/counters, and other functions (possibly also including display driver circuits, pulse-width modulation circuits, analog multiplexers, and A/D converters) onto a single silicon chip, forming a small but complete microcomputer system. It is widely used in industrial control. Since the 1980s, 4-bit and 8-bit MCUs have evolved to today's 300M high-speed MCUs.
 
-单片机是一种集成电路芯片，是采用超大规模集成电路技术把具有数据处理能力的中央处理器CPU、随机存储器RAM、只读存储器ROM、多种I/O口和中断系统、定时器/计数器等功能（可能还包括显示驱动电路、脉宽调制电路、模拟多路转换器、A/D转换器等电路）集成到一块硅片上构成的一个小而完善的微型计算机系统，在工业控制领域广泛应用。从上世纪80年代，由当时的4位、8位单片机，发展到现在的300M的高速单片机。
+## Basic Structure
 
-## 基本结构
+**Arithmetic Unit**
+The MCU consists of several components, including the arithmetic and logic unit (ALU), an accumulator, and registers. The ALU performs arithmetic or logical operations on data received. Its input sources are two 8-bit data, one from the accumulator and the other from the data register. The ALU can perform operations such as addition, subtraction, AND, OR, and comparison, and finally store the result in the accumulator.
 
-**运算器**
-运算器由运算部件——算术逻辑单元（Arithmetic & Logical Unit，简称ALU）、累加器和寄存器等几部分组成。ALU的作用是把传来的数据进行算术或逻辑运算，输入来源为两个8位数据，分别来自累加器和数据寄存器。ALU能完成对这两个数据进行加、减、与、或、比较大小等操作，最后将结果存入累加器。  
-运算器有两个功能：  
-- 执行各种算术运算。  
-- 执行各种逻辑运算，并进行逻辑测试，如零值测试或两个值的比较。  
-运算器所执行全部操作都是由控制器发出的控制信号来指挥的，并且，一个算术操作产生一个运算结果，一个逻辑操作产生一个判决。
+The ALU has two functions:
+- Perform various arithmetic operations.
+- Perform various logical operations and perform logical tests, such as testing for zero or comparing two values.
 
-**控制器**
-控制器由程序计数器、指令寄存器、指令译码器、时序发生器和操作控制器等组成，是发布命令的“决策机构”，即协调和指挥整个微机系统的操作。其主要功能有：  
+All operations performed by the ALU are directed by control signals from the controller. Each arithmetic operation produces a result, and each logical operation produces a decision.
 
-- 从内存中取出一条指令，并指出下一条指令在内存中的位置。  
-- 对指令进行译码和测试，并产生相应的操作控制信号，以便于执行规定的动作。  
-- 指挥并控制CPU、内存和输入输出设备之间数据流动的方向。  
+**Controller**
+The controller, consisting of a program counter, instruction register, instruction decoder, timing generator, and operation controller, is the "decision-making body" that issues commands, coordinating and directing the operations of the entire microcomputer system. Its main functions are:
 
-微处理器内通过内部总线把ALU、计数器、寄存器和控制部分互联，并通过外部总线与外部的存储器、输入输出接口电路联接。外部总线又称为系统总线，分为数据总线DB、地址总线AB和控制总线CB。通过输入输出接口电路，实现与各种外围设备连接。  
+- Retrieve an instruction from memory and indicate the location of the next instruction in memory.
+- Decode and test instructions, and generate corresponding operation control signals to execute the specified action. - Directs and controls the flow of data between the CPU, memory, and input/output devices.
+
+The microprocessor's internal bus interconnects the ALU, counters, registers, and control unit. It also connects to external memory and input/output interface circuits via the external bus. The external bus, also known as the system bus, is divided into the data bus (DB), the address bus (AB), and the control bus (CB). Connections to various peripheral devices are established through the input/output interface circuits.
 
 ![embeded](../resources/6-RoboticArmKnowledge/6.3-2.png)
 
-**主要寄存器** 
-- 累加器A  
-累加器A是微处理器中使用最频繁的寄存器。在算术和逻辑运算时它有双功能：运算前，用于保存一个操作数；运算后，用于保存所得的和、差或逻辑运算结果。  
+**Main Registers**
+- Accumulator A
 
-- 数据寄存器DR  
-数据寄存器通过数据总线向存储器和输入/输出设备送（写）或取（读）数据的暂存单元。它可以保存一条正在译码的指令，也可以保存正在送往存储器中存储的一个数据字节等等。  
+Accumulator A is the most frequently used register in a microprocessor. It serves a dual function during arithmetic and logical operations: it stores an operand before the operation and stores the sum, difference, or logical result after the operation.
 
-- 指令寄存器IR和指令译码器ID  
-指令包括操作码和操作数。  
-指令寄存器是用来保存当前正在执行的一条指令。当执行一条指令时，先把它从内存中取到数据寄存器中，然后再传送到指令寄存器。当系统执行给定的指令时，必须对操作码进行译码，以确定所要求的操作，指令译码器就是负责这项工作的。其中，指令寄存器中操作码字段的输出就是指令译码器的输入。  
-- 程序计数器PC  
-PC用于确定下一条指令的地址，以保证程序能够连续地执行下去，因此通常又被称为指令地址计数器。在程序开始执行前必须将程序的第一条指令的内存单元地址（即程序的首地址）送入PC，使它总是指向下一条要执行指令的地址。  
+- Data Register DR
 
-- 地址寄存器AR  
-地址寄存器用于保存当前CPU所要访问的内存单元或I/O设备的地址。由于内存与CPU之间存在着速度上的差异，所以必须使用地址寄存器来保持地址信息，直到内存读/写操作完成为止。
+The data register is a temporary storage unit for writing (writing) or reading (retrieving) data from memory and input/output devices via the data bus. It can store an instruction being decoded, a data byte being sent to memory, and so on.
 
-显然，当CPU向存储器存数据、CPU从内存取数据和CPU从内存读出指令时，都要用到地址寄存器和数据寄存器。同样，如果把外围设备的地址作为内存地址单元来看的话，那么当CPU和外围设备交换信息时，也需要用到地址寄存器和数据寄存器。  
+- Instruction Register IR and Instruction Decoder ID
 
-## 硬件特征
+An instruction consists of an opcode and operands.
+The instruction register stores the currently executed instruction. When executing an instruction, it is first fetched from memory into the data register and then transferred to the instruction register. When the system executes a given instruction, the opcode must be decoded to determine the required operation. This is the task of the instruction decoder. The output of the opcode field in the instruction register serves as the input to the instruction decoder. - Program Counter (PC)
+The PC determines the address of the next instruction to ensure continuous program execution, and is therefore often called the instruction address counter. Before program execution begins, the memory address of the program's first instruction (i.e., the program's starting address) must be entered into the PC so that it always points to the address of the next instruction to be executed.
 
-**单片机的体积比较小， 内部芯片作为计算机系统，其结构简单，但是功能完善，使用起来十分方便，可以模块化应用。**
-- 单片机有着较高的集成度，可靠性比较强，即使单片机处于长时间的工作也不会存在故障问题。
-- 单片机在应用时低电压、低能耗，是人们在日常生活中的首要选择， 为生产与研发提供便利。
-- 单片机对数据的处理能力和运算能力较强，可以在各种环境中应用，且有着较强的控制能力
+- Address Register (AR)
+Address registers store the address of the memory location or I/O device that the CPU is currently accessing. Due to the speed difference between memory and the CPU, address registers are necessary to maintain address information until the memory read/write operation is complete.
 
-## 单片机技术的开发
+Clearly, the address register and data register are used when the CPU stores data in memory, retrieves data from memory, and reads instructions from memory. Similarly, if the addresses of peripheral devices are considered memory addresses, then the address register and data register are also needed when the CPU and peripheral devices exchange information.
 
-**单片机**在电子技术中的开发，主要包括CPU开发、程序开发、 存储器开发、计算机开发及C语言程序开发，同时得到开发能够保证单片机在十分复杂的计算机与控制环境中可以正常有序的进行，这就需要相关人员采取一定的措施：  
+## Hardware Features
 
-- CPU开发。开发单片机中的CPU总线宽度，能够有效完善单片机信息处理功能缓慢的问题，提高信息处理效率与速度，开发改进中央处理器的实际结构，能够做到同时运行2-3个CPU，从而大大提高单片机的整体性能。
-- 程序开发。嵌入式系统的合理应用得到了大力推广，对程序进行开发时要求能够自动执行各种指令，这样可以快速准确地采集外部数据，提高单片机的应用效率。
-- 存储器开发。单片机的发展应着眼于内存，加强对基于传统内存读写功能的新内存的探索，使其既能实现静态读写又能实现动态读写，从而显着提高存储性能。
-- 计算机开发。进一步优化和开发单机片应激即分析，并应用计算机系统，通过连接通信数据，实现数据传递。
-- C语言程序开发。优化开发C语言能够保证单片机在十分复杂的计算机与控制环境中，可以正常有序的进行，促使其实现广泛全面的应用。
+**Microcontrollers are relatively small in size. Their internal chip functions as a computer system, offering a simple structure but comprehensive functionality, ease of use, and modularity.**
+
+- Microcontrollers have a high level of integration and reliability, ensuring they remain reliable even under extended operating conditions.
+- Microcontrollers operate at low voltage and consume low energy, making them a primary choice for daily life and facilitating production and R&D.
+- Microcontrollers have strong data processing and computing capabilities, making them suitable for use in a variety of environments and possessing robust control capabilities.
+
+## Microcontroller Technology Development
+
+**Microcontroller** development in electronics primarily involves CPU development, program development, memory development, computer development, and C language programming. Simultaneously developing these components ensures the smooth and orderly operation of microcontrollers in complex computer and control environments. This requires the following measures:
+
+- CPU development. Developing the CPU bus width in microcontrollers can effectively address the slow processing capabilities of microcontrollers, improving information processing efficiency and speed. Developing and improving the actual structure of the central processing unit (CPU) allows for simultaneous operation of two or three CPUs, significantly enhancing the overall performance of the microcontroller.
+- Program Development. The rational application of embedded systems has been widely promoted. Program development requires the ability to automatically execute various instructions, enabling rapid and accurate acquisition of external data and improving the efficiency of microcontroller applications.
+- Memory Development. Microcontroller development should focus on memory, with increased exploration of new memory based on the read/write functions of traditional memory, enabling both static and dynamic read/write capabilities, thereby significantly improving storage performance.
+- Computer Development. Further optimize and develop single-chip stress analysis and apply computer systems to achieve data transmission through communication data connections.
+- C Language Program Development. Optimizing and developing the C language ensures that microcontrollers can operate normally and orderly in complex computer and control environments, promoting their widespread and comprehensive application.
 
 ******
