--- a/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.5-robot_kinematics.md
+++ b/AI_Portable_Kit_EN/6-RoboticArmKnowledge/6.5-robot_kinematics.md
@@ -1,8 +1,8 @@
 # myCobot 280 algorithm
 
-## 1 结构参数
+## 1 Structural Parameters
 
-### 1.1 机械臂DH参数
+### 1.1 Robotic Arm DH Parameters
 
 
 | joint | theta |   d   |   a   | alpha | offset |
@@ -14,51 +14,49 @@
 | 5 | q5 |   75.05   |   0   | -1.5708 | 1.5708 |
 | 6 | q6 |   45.6   |   0   | 0 | 0 |
 
-### 1.2 运动学模型
+### 1.2 Kinematic Model
 
 ![dcmotor](../resources/6-RoboticArmKnowledge/6.5-1.png)
 
-## 2 坐标系简介
-### 2.1 工具坐标系
-![TOOL](../../resourse/2-serialproduct/2.1-280/algorithm/tool1.png)
+## 2 Coordinate System Introduction
 
-如图是Mecharm的机器人模型，图中的Base表示机器人的基坐标系，O’表示末端法兰盘坐标系，P点表示机械臂末端相对于基坐标系的位置（x=152, y=0, z=224）
-
-在末端法兰盘的基础上延伸一定位姿，并将设置的工具点视为机器末端
+### 2.1 Tool Coordinate System
 
 ![TOOL](../resources/6-RoboticArmKnowledge/6.5-2.png)
 
-图中的T即为设置的工具坐标系，该坐标系的姿态与O’一致，原点位置发生了相对位移，使用python函数设置工具坐标系
+The figure shows a Mecharm robot model. Base represents the robot's base coordinate system, O' represents the end flange coordinate system, and point P represents the position of the end arm relative to the base coordinate system (x=152, y=0, z=224).
 
-- set_tool_reference([x, y, z, rx, ry, rz])	//设置工具坐标系
-- set_end_type(1)	//设置末端坐标系类型为工具
-- 由于工具坐标系T相对O’未发生旋转，rx = ry = rz = 0
-- 假设工具坐标系T的原点在坐标系O’中坐标为（x = 0, y = 0, z = 100mm）
-- 最终的工具坐标系参数为set_tool_reference(0, 0, 100, 0, 0, 0)
+Based on the end flange, a certain pose is extended, and the set tool point is considered the end of the machine.
 
+![TOOL](../resources/6-RoboticArmKnowledge/6.5-2.png)
+
+The T in the figure is the tool coordinate system. The posture of this coordinate system is consistent with O’, and the origin position has a relative displacement. Use the Python function to set the tool coordinate system.
+
+- set_tool_reference([x, y, z, rx, ry, rz]) //Set the tool coordinate system
+- set_end_type(1) //Set the end coordinate system type to tool
+- Since the tool coordinate system T does not rotate relative to O’, rx = ry = rz = 0
+- Assume that the origin of the tool coordinate system T in the coordinate system O’ is (x = 0, y = 0, z = 100mm)
+- The final tool coordinate system parameters are set_tool_reference(0, 0, 100, 0, 0, 0)
 
 ![TOOL](../resources/6-RoboticArmKnowledge/6.5-3.png)
 
-由于设置了工具坐标系，此时机器人的末端从O’延伸至了T，此时读到的机器末端坐标变成了（152+100, 0, 224），并且坐标姿态运动将绕工具点T旋转。
+Since the tool coordinate system is set, the robot's end point now extends from O' to T. The read end point coordinates become (152+100, 0, 224), and the coordinate pose motion will rotate around the tool point T.
 
-### 2.2 世界坐标系
+### 2.2 World Coordinate System
 
 ![TOOL](../resources/6-RoboticArmKnowledge/6.5-4.png)
 
-第2节介绍了通过设置工具坐标系可以对机械臂末端坐标系做一定位姿的延伸，我们也可以通过设置世界坐标系在机械臂Base基坐标系的基础上延伸一定位姿，设置的世界坐标系将取代原Base坐标系成为新的基坐标系。
+Section 2 introduced how to extend the robot arm's end-of-arm coordinate system to a certain pose by setting the tool coordinate system. We can also extend the robot arm's base coordinate system to a certain pose by setting the world coordinate system. The set world coordinate system will replace the original base coordinate system and become the new base coordinate system.
 
-图中的W即为设置的世界坐标系，该坐标系的姿态与Base一致，原点位置发生了相对位移，使用python函数设置世界坐标系
+The W in the figure is the set world coordinate system. The posture of this coordinate system is consistent with the Base, and the origin position has undergone relative displacement. Use the Python function to set the world coordinate system.
 
+- set_world_reference([x, y, z, rx, ry, rz]) //Set the world coordinate system
+- set_reference_frame(1) //Set the base coordinate system type to world
+- Assume that the world coordinate system W has not rotated relative to the Base, rx = ry = rz = 0
+- Assume that the origin of the world coordinate system W in the coordinate system Base is (x = 0, y = 0, z = -100mm)
+- The final world coordinate system parameters are set_world_reference(0, 0, -100, 0, 0, 0)
 
-- set_world_reference([x, y, z, rx, ry, rz])	//设置世界坐标系
-- set_reference_frame(1)	//设置基坐标系类型为世界
-- 假设世界坐标系W相对Base未发生旋转，rx = ry = rz = 0
-- 假设世界坐标系W的原点在坐标系Base中坐标为（x = 0, y = 0, z = -100mm）
-- 最终的世界坐标系参数为set_world_reference(0, 0, -100, 0, 0, 0)
-
-
-
- 由于设置了世界坐标系，此时机器人的原点从Base延伸至了W，此时读到的O’坐标变成了（152, 0, 224+100）。
+Since the world coordinate system is set, the robot's origin now extends from the Base to the W, and the read O' coordinate becomes (152, 0, 224+100).
 
 
 
