--- a/AI_Portable_Kit_EN/7-BasicFunctionApplication/7.1-myStudio/7.1.1-myStudio_download_driverinstalled.md
+++ b/AI_Portable_Kit_EN/7-BasicFunctionApplication/7.1-myStudio/7.1.1-myStudio_download_driverinstalled.md
@@ -1,79 +1,72 @@
-# 1 myStudio环境搭建
+# 1 Environment Building
 
-## 1.1 myStudio下载和安装
+## 1.1 Download and Installation
 
->注意：myStudio安装时的安装路径不能有任何空格
+>Note：The installation path of myStudio installation cannot have any spaces
 
-下载地址：
+address for downloading:
 
-**1. [GitHub地址](https://github.com/elephantrobotics/myStudio)**
+**1. [GitHub](https://github.com/elephantrobotics/myStudio)**
 
-* 进入下载地址后，点击右侧`myStudio`，选择相应版本下载即可。
+* Click on `myStudio`  at the right side and download the version corresponding to your PC. **Do not install myStudio into files with space directory.** 
 
 ![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-2.png)
 
 ![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-3.png)
 
-* 不同后缀代表了适用于不同的系统，请下载相应版本：
-  * *.tra.xz —— Linux系统
-  * *.dmg —— Mac 系统
-  * *.exe —— Window 系统
+* Different suffixes represent versions suitable for different operating systems. Please download the appropriate version:
+* *.tra.xz - Linux
+* *.dmg - Mac
+* *.exe - Windows
 
+**2. [Official Website](https://www.elephantrobotics.com/download/)**
 
-
-**2. [官网地址](https://www.elephantrobotics.com/download/)**
-
-依据电脑系统自行下载即可。
-
+Download the software based on your computer system.
 
 ![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-4.png)
 
-
-> **注意：** 请下载最新版本。可以在下载好的myStudio界面中查看当前版本，并更新至最新版本。
-
+> **Note:** Please download the latest version. You can check the current version in the downloaded myStudio interface and update to the latest version.
 
 ![TOOL](../../resources/7-BasicFunctionApplication/7.1/7.1-5.png)
 
+## 1.2 Driver Installation
 
-## 1.2 安装驱动
+Users can download the corresponding **CP210X** or **CP34X** driver package for their operating system by clicking the button below. After unzipping the package, select the installation package corresponding to your operating system's bitness.
 
-用户可根据自己所使用的操作系统，点击下方按钮下载相应的 **CP210X** 或 **CP34X** 驱动程序压缩包，在解压压缩包后，选择对应操作系统位数的安装包进行安装。
+Currently, there are two driver chip versions: **CP210X** (for the CP2104 version) and **CP34X** (for the CH9102 version). If you're unsure of the USB chip your device uses, you can install both drivers simultaneously. (**CH9102_VCP_SER_MacOS** may display an error during installation, but the installation is complete; you can ignore it.)
 
-目前存在两种驱动芯片版本， **CP210X** （适用于CP2104版本）以及**CP34X** （适用于CH9102版本）驱动程序压缩包。若您不确定您的设备所使用的USB芯片，可同时安装两种驱动。（ **CH9102_VCP_SER_MacOS** 在安装过程中，可能出现报错，但实际上已经完成安装，忽略即可。）
+For Mac OS, before installing, ensure that "Preferences -> Security & Privacy -> General" is enabled and that downloads from the App Store and approved developers are permitted.
 
-对于 Mac OS，在安装之前确保系统 "偏好设置->安全性和隐私->通用" ，并允许从 App Store 和被认可的开发者。
+- Download the **M5Stack-basic** serial port driver from the bottom
 
-- 下载底部 **M5Stack-basic** 串口驱动程序
-  
   - **CP210X**
-    - [ **Windows10** ](https://download.elephantrobotics.com/software/drivers/CP210x_VCP_Windows.zip)
+    - [ **Windows 10** ](https://download.elephantrobotics.com/software/drivers/CP210x_VCP_Windows.zip)
     - [ **MacOS** ](https://download.elephantrobotics.com/software/drivers/CP210x_VCP_MacOS.zip)
     - [ **Linux** ](https://download.elephantrobotics.com/software/drivers/CP210x_VCP_Linux.zip)
-  
-  
+
   * **CP34X**
-  
-    - [ **Windows10** ](https://download.elephantrobotics.com/software/drivers/CH9102_VCP_SER_Windows.exe)
-  
+
+    - [ **Windows 10** ](https://download.elephantrobotics.com/software/drivers/CH9102_VCP_SER_Windows.exe)
+
     - [ **MacOS** ](https://download.elephantrobotics.com/software/drivers/CH9102_VCP_MacOS.zip)
 
-- 下载末端 **Atom** 串口驱动程序 
+- Download the terminal **Atom** serial port driver.
   - [ **Windows10** ](https://download.elephantrobotics.com/software/drivers/CDM21228_Setup.zip)
 
 
 ![P210X_install](../../resources/7-BasicFunctionApplication/7.1/CP210X_install.gif)
 
-## 1.3 如何区分CP210X和CP34X芯片
+## 1.3 How to distinguish between CP210X and CP34X chips
 
-- 如下图所示，打开 **设备管理器** ，查看 **端口(COM和LPT)** 
+- As shown below, open the **Device Manager** and check **Ports (COM and LPT)**.
 
-![frimware_check](../../resources/7-BasicFunctionApplication/7.1/firmware_check.gif)
+![firmware_check](../../resources/7-BasicFunctionApplication/7.1/firmware_check.gif)
 
-  * 若 **端口(COM和LPT)** 显示 **USB-Enhanced-SERIAL CH9102**，则为 **CP34X芯片** 
+* If **Ports (COM and LPT)** displays **USB-Enhanced-SERIAL CH9102**, it's a **CP34X chip**.
 
 ![CP34X](../../resources/7-BasicFunctionApplication/7.1/CP34X.png)
 
-  * 若 **端口(COM和LPT)** 显示 **Silicon Labs CP210x USB to UART Bridge**，则为 **CP210X芯片**
+* If **Ports (COM and LPT)** displays **Silicon Labs CP210x USB to UART Bridge**, it's a **CP210X chip**.
 
 ![CP210C](../../resources/7-BasicFunctionApplication/7.1/CP210X.png)
 
