docs(aikit):update use

--- a/AI_Portable_Kit_CN/2-ProductFeature/2.3-260_version.md
+++ b/AI_Portable_Kit_CN/2-ProductFeature/2.3-260_version.md
@@ -62,4 +62,4 @@
 
 ---
 
-[← 上一页](2.2-270_version.md) | [下一页 →](2.4-accessories.md)
+[← 上一页](2.2-270_version.md) | [下一页 →](./2.4.1-adaptive_gripper.md)
