docs(aikit-use):update aikit use

--- a/AI_Portable_Kit_CN/1-ProductIntroduction/1.2-ApplicationScenarios.md
+++ b/AI_Portable_Kit_CN/1-ProductIntroduction/1.2-ApplicationScenarios.md
@@ -14,6 +14,10 @@
 
 ![CheckTheBox](../resources/1-ProductIntroduction/1-2.png)
 
+- 可视化软件：支持可视化软件操作，提供自定义简单操作方法，快速开启人工智能套装。
+
+![CheckTheBox](../resources/1-ProductIntroduction/1-3.png)
+
 - 多种机械臂适配：
 
 ![CheckTheBox](../resources/1-ProductIntroduction/more_robot.gif)
