--- a/AI_Portable_Kit_CN/2-ProductFeature/2.2-270_version.md
+++ b/AI_Portable_Kit_CN/2-ProductFeature/2.2-270_version.md
@@ -30,7 +30,7 @@
 <tr>
     <td>mechArm 270 PI</td>
     <td> <img src="../resources/2-ProductFeature/2.2/2.2-2.png"></td>
-    <td><a href="https://docs.elephantrobotics.com/docs/mecharm-m5-en/">简介</a></td>
+    <td><a href="https://docs.elephantrobotics.com/docs/mecharm-pi-cn/">简介</a></td>
 </tr>
 </table>
 
