--- a/AI_Portable_Kit_EN/1-ProductIntroduction/1.2-ApplicationScenarios.md
+++ b/AI_Portable_Kit_EN/1-ProductIntroduction/1.2-ApplicationScenarios.md
@@ -14,6 +14,10 @@ This portable AI educational training box features five vision algorithms and ei
 
 ![CheckTheBox](../resources/1-ProductIntroduction/1-2.png)
 
+- Visual Software: Supports visual software operation, provides customized and simple operation methods, and quickly activates the AI ​​suite.
+
+![CheckTheBox](../resources/1-ProductIntroduction/1-3.png)
+
 - Multiple robotic arm adaptation:
 
 ![CheckTheBox](../resources/1-ProductIntroduction/more_robot.gif)
