--- a/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.1-color_recognition.md
+++ b/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.1-color_recognition.md
@@ -15,3 +15,9 @@ Follow the terminal prompts and select the corresponding robot arm model. If the
 ![](../resources/5-BasicAlgorithmFunction/5.1-3.png)
 
 ![](../resources/5-BasicAlgorithmFunction/5.1-4.png)
+
+**Demo video:** 
+
+<video id="my-video" class="video-js" controls preload="auto" width="100%"
+poster="" data-setup='{"aspectRatio":"16:9"}'>
+  <source src="../resources/5-BasicAlgorithmFunction/ColorRecognition.mp4"></video>
