--- a/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.5-yolov5_recognition.md
+++ b/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.5-yolov5_recognition.md
@@ -17,3 +17,9 @@ Follow the terminal prompts and select the corresponding robot arm model. Skip t
 ![](../resources/5-BasicAlgorithmFunction/5.5-2.png)
 
 ![](../resources/5-BasicAlgorithmFunction/5.5-3.png)
+
+**Demo video:** 
+
+<video id="my-video" class="video-js" controls preload="auto" width="100%"
+poster="" data-setup='{"aspectRatio":"16:9"}'>
+  <source src="../resources/5-BasicAlgorithmFunction/YOLORecognition.mp4"></video>
